--- a/shah/translations/de_DE.json
+++ b/shah/translations/de_DE.json
@@ -454,8 +454,7 @@
   "3RWPjE": "Wenn Sie Fragen haben oder eine Transaktion bestreiten müssen, {=let us know}.",
   "1cDNp2": "Lass uns wissen",
   "2aLpDM": "Ich habe es verstanden.",
-  "23c0Qy": "Hilfe",
-  "1nLPNA": "Support, Einstellungen und mehr",
+  "27amK4": "Help, settings, & more",
   "37CWGX": "Schließen",
   "24XkI": "Origin ermöglicht echten Peer-to-Peer-Handel.",
   "1jPEbl": "© 2019 Origin Protocol, Inc.",
@@ -465,7 +464,7 @@
   "3rymEt": "Über Origin",
   "4hHFe9": "Erstellen Sie einen Marktplatz",
   "b9M5L": "die Einstellungen",
-  "2aAs7W": "Feedback geben",
+  "3bazax": "Help",
   "dYIUq": "Heute Origin-Token verdienen",
   "2cup7z": "Nehmen Sie an unseren Kampagnen teil und erledigen Sie Aufgaben auf unserer DApp, um Origin-Token zu erhalten.",
   "3PLxx0": "Gehen",
@@ -681,6 +680,10 @@
   "4FezaJ": "Token verdient",
   "2haWvO": "Gesamteinnahmen",
   "1YUe0g": "Insgesamt verdient",
+  "uKsWN": "Campaign Ended",
+  "4fO8ds": "The budget allocated for this campaign has been reached. No more tokens are available to earn for this campaign.",
+  "1CZFEM": "Read our {blog post}.",
+  "3xu4iO": "To get the latest updates about Origin Rewards, {joinTelegram}.",
   "2tRIOg": "Keine Kampagnen gefunden",
   "3Dcwum": "Origin Marketplace installed",
   "Nuz99": "Partner Referral",
@@ -745,33 +748,16 @@
   "18RyVa": "Stärken Sie Ihr Profil und verdienen Sie Origin-Token, indem Sie Überprüfungen durchführen.",
   "wp2vP": "Vollendet, fertiggestellt",
   "vVUtP": "Willkommen beim Origin-Protokoll",
-  "jb3yU": "Eingeladen von",
-  "20DEff": "Ihr Freund {name} hat Sie zu Origin eingeladen",
-  "hYOWA": "Melde dich an und erhalte KOSTENLOSE Origin Token",
-  "1ABObQ": "Melden Sie sich noch heute für Origin an.",
-  "1d6tmM": "{firstName} und Sie erhalten beide Origin-Kryptowährungs-Token (OGN).",
-  "swYXX": "Verdienen Sie zusätzliche Token, wenn Sie Ihr Profil bestätigen, Ihre Freunde einladen und Origin kaufen und verkaufen.",
-  "1Nhta": "Jetzt registrieren",
-  "3ZC0FJ": "Was ist Origin?",
-  "35LWwH": "Origin ist der erste Peer-to-Peer-Marktplatz, der vollständig auf der Blockchain basiert",
-  "2B59Tc": "Kostenlose Nutzung mit 0% Transaktionsgebühren",
-  "3LGZ6f": "Zensurfestes Durchsuchen und Suchen",
-  "1w6gy4": "Dutzende von Kategorien wie Geschenkkarten, Homesharing, E-Commerce und Dienstleistungen",
-  "3RgYtu": "Was sind Origin-Token?",
-  "2klVRF": "Origin Cryptocurrency-Token (OGN) sind ERC-20-Token, die auf vielfältige Weise auf der Plattform verwendet werden können.",
-  "3FISrv": "Verdiente Origin-Token (OGN) sind derzeit für die Verwendung in der Origin-App und -Plattform gesperrt. Sie können derzeit nicht auf andere Benutzer übertragen werden. In Zukunft wird erwartet, dass OGN freigeschaltet und übertragbar ist.",
-  "3cl6l0": "Lernen Sie mehr",
-  "2CCXRK": "Belohnt",
-  "3yDMxS": "OGN ist eine von Origin-Benutzern erworbene Belohnungskryptowährung. Erhalten Sie Belohnungen, wenn Sie Ihr Konto bestätigen oder Ihre Freunde zu Origin einladen. Sie erhalten sogar OGN als Cash Back, wenn Sie kaufen und verkaufen.",
-  "3x8LcU": "Förderung",
-  "nQxkV": "Verkäufer verwenden OGN, um ihre Angebote auf dem Marktplatz zu bewerben. Dies gibt ihren Auflistungen eine höhere Sichtbarkeit und Platzierung. Angebote mit OGN haben eine höhere Chance, schnell verkauft zu werden.",
-  "3IdS1u": "Beginnen Sie innerhalb weniger Minuten mit Origin-Tokens",
-  "3x5LAR": "Verbinden Sie Ihre Kryptowährungsgeldbörse mit Origin",
-  "1rYphf": "Melden Sie sich an und überprüfen Sie Ihr Konto und Ihre Berechtigung",
-  "xy6Hw": "Beginnen Sie heute damit, zu verdienen",
-  "1A0dWH": "Loslegen",
-  "2pjq9v": "Habe Fragen?",
-  "4BVEan": "In Kontakt kommen",
+  "2rolpt": "Join Origin Rewards to earn",
+  "2UiHlq": "Your friend {name} has invited you to earn",
+  "3DGyPu": "Origin Tokens",
+  "45NvfT": "Sign Up Now",
+  "4ox9Sb": "Get started by downloading Origin Marketplace - the app that allows you to buy and sell anything using crypto right from your phone.",
+  "1EEJqF": "Scan to install our app",
+  "VIbSQ": "or",
+  "3LJKn0": "Earn From Desktop",
+  "q02iR": "What are Origin Rewards?",
+  "EGUu4": "OGN is a rewards cryptocurrency earned by Origin users. Earn rewards when you verify your account or invite your friends to join Origin. Even get OGN as cash back when you buy and sell.",
   "4jRz2r": "Origin-Belohnungen",
   "3gLqI4": "Kampagne beitreten",
   "PhK4s": "Origin Rewards-Bedingungen",
@@ -783,7 +769,7 @@
   "1R5Tqk": "Die Bedingungen akzeptieren",
   "4DsgoB": "Melden Sie sich für Origin Rewards an",
   "1oOkt7": "Nehmen Sie am Origin-Prämienprogramm teil, um Origin-Token (OGN) zu erhalten. Geschäftsbedingungen gelten.",
-  "157nkC": "Das verdiente OGN wird am Ende jeder Kampagne verteilt. OGN ist derzeit für die Verwendung auf der Origin-Plattform gesperrt und kann nicht übertragen werden. Es wird erwartet, dass OGN in Zukunft freigeschaltet und übertragbar sein wird.",
+  "VWMI": "Earned OGN will be distributed at the end of each campaign at the sole discretion of Origin.",
   "4weJUD": "Durch die Teilnahme am Origin-Prämienprogramm erklären Sie sich damit einverstanden, dass Sie zukünftig verdiente Origin-Token für mindestens 1 Jahr ab dem Datum des Erwerbs Ihrer Token nicht an andere übertragen oder verkaufen.",
   "4vRJSg": "OGN werden im Rahmen einer Transaktion ausgegeben, die ursprünglich von der Registrierung gemäß dem US-amerikanischen Wertpapiergesetz von 1933 in der jeweils gültigen Fassung (dem „Securities Act“) befreit war, und dürfen in den Vereinigten Staaten nicht an oder für Rechnung oder Nutzen eines US-amerikanischen Unternehmens übertragen werden Person, sofern keine Ausnahme von den Registrierungsanforderungen des Securities Act und allen anwendbaren staatlichen Wertpapiergesetzen vorliegt. Die oben verwendeten Begriffe haben die ihnen in Regulation S gemäß dem Securities Act und allen anwendbaren Gesetzen und Vorschriften zugewiesenen Bedeutungen.",
   "1oPDxX": "I am not a citizen or resident of the United States of America",
@@ -1041,7 +1027,7 @@
   "qUaej": "Mitteilungen",
   "3e7Twf": "Benachrichtigungen",
   "4yVyLH": "die Einstellungen",
-  "2sNgod": "Feedback",
+  "2wfvdg": "Help",
   "3vGT5M": "Konsole",
   "1k58ts": "Mehr",
   "40SIOC": "Listings",
