--- a/shah/translations/el_GR.json
+++ b/shah/translations/el_GR.json
@@ -454,8 +454,7 @@
   "3RWPjE": "Εάν έχετε οποιεσδήποτε ερωτήσεις ή πρέπει να αμφισβητήσετε μια συναλλαγή, {=let us know}.",
   "1cDNp2": "Ενημέρωσέ μας",
   "2aLpDM": "Το πιασα.",
-  "23c0Qy": "Βοήθεια",
-  "1nLPNA": "Υποστήριξη, ρυθμίσεις και πολλά άλλα",
+  "27amK4": "Help, settings, & more",
   "37CWGX": "Κλείσε",
   "24XkI": "Η προέλευση επιτρέπει το αληθινό εμπόριο μεταξύ ομότιμων.",
   "1jPEbl": "© 2019 Πρωτόκολλο προέλευσης, Inc.",
@@ -465,7 +464,7 @@
   "3rymEt": "Σχετικά με την Προέλευση",
   "4hHFe9": "Δημιουργήστε ένα Marketplace",
   "b9M5L": "Ρυθμίσεις",
-  "2aAs7W": "Δώστε Σχόλια",
+  "3bazax": "Help",
   "dYIUq": "Κερδίστε Origin Tokens Σήμερα",
   "2cup7z": "Συμμετάσχετε στις καμπάνιες μας και ολοκληρώστε τις εργασίες σας στο DApp για να κερδίσετε τα Tokens Origin.",
   "3PLxx0": "Πηγαίνω",
@@ -681,6 +680,10 @@
   "4FezaJ": "Τα κέρδη που κερδίσατε",
   "2haWvO": "συνολικες αποδοχες",
   "1YUe0g": "Συνολικά κέρδη",
+  "uKsWN": "Campaign Ended",
+  "4fO8ds": "The budget allocated for this campaign has been reached. No more tokens are available to earn for this campaign.",
+  "1CZFEM": "Read our {blog post}.",
+  "3xu4iO": "To get the latest updates about Origin Rewards, {joinTelegram}.",
   "2tRIOg": "Δεν εντοπίσθηκαν καμπάνιες",
   "3Dcwum": "Origin Marketplace installed",
   "Nuz99": "Partner Referral",
@@ -745,33 +748,16 @@
   "18RyVa": "Ενισχύστε το προφίλ σας και κερδίστε τα Αναγνωριστικά προέλευσης συμπληρώνοντας τις επαληθεύσεις.",
   "wp2vP": "Ολοκληρώθηκε το",
   "vVUtP": "Καλώς ορίσατε στο πρωτόκολλο προέλευσης",
-  "jb3yU": "Προσκλήθηκε από",
-  "20DEff": "Ο φίλος σας {name} σας προσκάλεσε να εγγραφείτε στην Προέλευση",
-  "hYOWA": "Εγγραφείτε και κερδίστε ΔΩΡΕΑΝ Origin Tokens",
-  "1ABObQ": "Εγγραφείτε σήμερα για την Προέλευση.",
-  "1d6tmM": "{firstName} και θα κερδίσετε και τα δύο μάρκες Origin Cryptocurrency Origin (OGN).",
-  "swYXX": "Κερδίστε επιπλέον μάρκες όταν επαληθεύετε το προφίλ σας, προσκαλείτε τους φίλους σας και αγοράζετε και πουλάτε στο Origin.",
-  "1Nhta": "Εγγραφείτε τώρα",
-  "3ZC0FJ": "Τι είναι η προέλευση;",
-  "35LWwH": "Η καταγωγή είναι η πρώτη αγορά peer-to-peer που χτίστηκε εξ ολοκλήρου στο blockchain",
-  "2B59Tc": "Δωρεάν για χρήση με τέλη συναλλαγών 0%",
-  "3LGZ6f": "Ανθεκτική στη λογοκρισία περιήγηση και αναζήτηση",
-  "1w6gy4": "Δεκάδες κατηγορίες όπως οι κάρτες δώρων, η στέγαση, το ηλεκτρονικό εμπόριο και οι υπηρεσίες",
-  "3RgYtu": "Τι είναι τα Tokens;",
-  "2klVRF": "Τα μάρκες κρυπτογράφησης προέλευσης (OGN) είναι μάρκες ERC-20 που μπορούν να χρησιμοποιηθούν στην πλατφόρμα με πολλούς τρόπους.",
-  "3FISrv": "Τα tokens κερδισμένης προέλευσης (OGN) είναι αυτήν τη στιγμή κλειδωμένα για χρήση στην εφαρμογή και πλατφόρμα προέλευσης. Δεν μπορούν να μεταφερθούν σε άλλους χρήστες αυτή τη στιγμή. Στο μέλλον, αναμένεται ότι το OGN θα ξεκλειδωθεί και θα μεταφερθεί.",
-  "3cl6l0": "Μάθετε περισσότερα",
-  "2CCXRK": "Ανταμοιβές",
-  "3yDMxS": "Το OGN είναι μια κρυπτογράφηση ανταμοιβών κερδισμένη από τους χρήστες του Origin. Κερδίστε έπαθλα όταν επαληθεύετε το λογαριασμό σας ή προσκαλέστε τους φίλους σας να εγγραφούν στην Προέλευση. Ακόμα και να πάρετε OGN ως μετρητά όταν αγοράζετε και πουλάτε.",
-  "3x8LcU": "Προώθηση",
-  "nQxkV": "Οι πωλητές χρησιμοποιούν το OGN για να προωθήσουν τις λίστες τους στην αγορά. Αυτό δίνει στους καταλόγους τους μεγαλύτερη προβολή και τοποθέτηση. Οι καταχωρήσεις με OGN έχουν περισσότερες πιθανότητες να πωληθούν γρήγορα.",
-  "3IdS1u": "Ξεκινήστε να κερδίζετε τα tokens προέλευσης μέσα σε λίγα λεπτά",
-  "3x5LAR": "Συνδέστε το πορτοφόλι κρυπτογράφησης με το Origin",
-  "1rYphf": "Εγγραφείτε και επαληθεύστε τον λογαριασμό σας και την επιλεξιμότητα",
-  "xy6Hw": "Ξεκινήστε να κερδίζετε σήμερα",
-  "1A0dWH": "Ξεκίνα",
-  "2pjq9v": "Έχετε ερωτήσεις;",
-  "4BVEan": "Ερχομαι σε επαφή",
+  "2rolpt": "Join Origin Rewards to earn",
+  "2UiHlq": "Your friend {name} has invited you to earn",
+  "3DGyPu": "Origin Tokens",
+  "45NvfT": "Sign Up Now",
+  "4ox9Sb": "Get started by downloading Origin Marketplace - the app that allows you to buy and sell anything using crypto right from your phone.",
+  "1EEJqF": "Scan to install our app",
+  "VIbSQ": "or",
+  "3LJKn0": "Earn From Desktop",
+  "q02iR": "What are Origin Rewards?",
+  "EGUu4": "OGN is a rewards cryptocurrency earned by Origin users. Earn rewards when you verify your account or invite your friends to join Origin. Even get OGN as cash back when you buy and sell.",
   "4jRz2r": "Αρχικές ανταμοιβές",
   "3gLqI4": "Συμμετοχή σε καμπάνια",
   "PhK4s": "Όροι ανταμοιβής προέλευσης",
@@ -783,7 +769,7 @@
   "1R5Tqk": "Αποδοχή Όρων",
   "4DsgoB": "Εγγραφείτε για ανταμοιβές προέλευσης",
   "1oOkt7": "Συμμετοχή στο πρόγραμμα επιβράβευσης της Origin για να κερδίσετε το Origin tokens (OGN). Ισχύουν όροι και προϋποθέσεις.",
-  "157nkC": "Τα κέρδη OGN θα διανεμηθούν στο τέλος κάθε εκστρατείας. Το OGN είναι προς το παρόν κλειδωμένο για χρήση στην πλατφόρμα Origin και δεν μπορεί να μεταφερθεί. Αναμένεται ότι το OGN θα ξεκλειδωθεί και θα μεταφερθεί στο μέλλον.",
+  "VWMI": "Earned OGN will be distributed at the end of each campaign at the sole discretion of Origin.",
   "4weJUD": "Συμμετέχοντας στο πρόγραμμα Ανταμοιβών Προέλευσης, συμφωνείτε ότι δεν θα μεταβιβάσετε ή θα πωλήσετε τα μελλοντικά κέρδη Origin tokens σε άλλα για τουλάχιστον 1 χρόνο από την ημερομηνία απόκτησης των μαρκών σας.",
   "4vRJSg": "OGN εκδίδονται σε μια συναλλαγή που απαλλάσσεται αρχικά από την εγγραφή σύμφωνα με τον αμερικανικό νόμο περί κινητών αξιών του 1933, όπως τροποποιήθηκε (ο «νόμος περί κινητών αξιών») και δεν μπορεί να μεταβιβαστεί στις Ηνωμένες Πολιτείες προς ή για λογαριασμό ή προς όφελος οποιασδήποτε χώρας με εξαίρεση την ύπαρξη διαθέσιμης εξαίρεσης από τις απαιτήσεις εγγραφής του Νόμου περί Κινητών Αξιών και από όλους τους ισχύοντες νόμους περί κρατικών τίτλων. Οι όροι που χρησιμοποιούνται παραπάνω έχουν τις έννοιες που τους δόθηκαν στον κανονισμό S βάσει του νόμου περί κινητών αξιών και σε όλους τους ισχύοντες νόμους και κανονισμούς.",
   "1oPDxX": "I am not a citizen or resident of the United States of America",
@@ -1041,7 +1027,7 @@
   "qUaej": "Μηνύματα",
   "3e7Twf": "Ειδοποιήσεις",
   "4yVyLH": "Ρυθμίσεις",
-  "2sNgod": "Ανατροφοδότηση",
+  "2wfvdg": "Help",
   "3vGT5M": "Κονσόλα",
   "1k58ts": "Περισσότερο",
   "40SIOC": "Λίστα",
