--- a/shah/translations/hr_HR.json
+++ b/shah/translations/hr_HR.json
@@ -454,8 +454,7 @@
   "3RWPjE": "Ako imate bilo kakvih pitanja ili trebate osporiti transakciju, {=let us know}.",
   "1cDNp2": "javite nam",
   "2aLpDM": "Imam ga.",
-  "23c0Qy": "Pomozite",
-  "1nLPNA": "Podrška, postavke i još mnogo toga",
+  "27amK4": "Help, settings, & more",
   "37CWGX": "Zatvoriti",
   "24XkI": "Porijeklo omogućuje istinsku međusobnu trgovinu.",
   "1jPEbl": "© Protokol porijekla 2019, Inc.",
@@ -465,7 +464,7 @@
   "3rymEt": "O podrijetlu",
   "4hHFe9": "Stvorite Marketplace",
   "b9M5L": "postavke",
-  "2aAs7W": "Dati povratnu informaciju",
+  "3bazax": "Help",
   "dYIUq": "Zaradite tokene porijekla danas",
   "2cup7z": "Sudjelujte u našim kampanjama i dovršite zadatke na našem DApp-u kako biste zaradili Origin Tokens.",
   "3PLxx0": "Ići",
@@ -681,6 +680,10 @@
   "4FezaJ": "Tokeni su zarađeni",
   "2haWvO": "ukupna zarada",
   "1YUe0g": "Ukupno zaradio",
+  "uKsWN": "Campaign Ended",
+  "4fO8ds": "The budget allocated for this campaign has been reached. No more tokens are available to earn for this campaign.",
+  "1CZFEM": "Read our {blog post}.",
+  "3xu4iO": "To get the latest updates about Origin Rewards, {joinTelegram}.",
   "2tRIOg": "Nisu otkrivene kampanje",
   "3Dcwum": "Origin Marketplace installed",
   "Nuz99": "Partner Referral",
@@ -745,33 +748,16 @@
   "18RyVa": "Ojačajte svoj profil i zaradite tokene izvornika dovršavanjem provjera.",
   "wp2vP": "dovršen",
   "vVUtP": "Dobro došli u Protokol o podrijetlu",
-  "jb3yU": "Pozvao / la",
-  "20DEff": "Vaš prijatelj {name} je pozvao da se pridružite Origin",
-  "hYOWA": "Prijavite se i zaradite besplatne tokene izvora",
-  "1ABObQ": "Danas se prijavite za podrijetlo.",
-  "1d6tmM": "{firstName} i oboje ćete zaraditi tokene žigova porijekla (OGN).",
-  "swYXX": "Zaradite dodatne žetone kada potvrdite svoj profil, pozovete prijatelje i kupite i prodajte podrijetlo.",
-  "1Nhta": "Prijavi se sad",
-  "3ZC0FJ": "Što je podrijetlo?",
-  "35LWwH": "Podrijetlo je prvo tržište ravnopravnih partnera koje je izgrađeno isključivo na bločnom lancu",
-  "2B59Tc": "Besplatno korištenje s 0% naknada za transakcije",
-  "3LGZ6f": "Pregledavanje i pretraživanje otporno na cenzuru",
-  "1w6gy4": "Deseci kategorija kao što su poklon kartice, kućne usluge, e-trgovina i usluge",
-  "3RgYtu": "Što su tokovi porekla?",
-  "2klVRF": "Izvorni kripto valutni znakovi (OGN) su ERC-20 tokeni koji se mogu koristiti na platformi na mnogo načina.",
-  "3FISrv": "Tokeni zaradenog porijekla (OGN) trenutno su zaključani za upotrebu na aplikaciji i platformi Origin. Trenutno se ne mogu prenijeti na druge korisnike. U budućnosti se očekuje da će OGN biti otključana i prenosiva.",
-  "3cl6l0": "Saznajte više",
-  "2CCXRK": "nagrade",
-  "3yDMxS": "OGN je cryptocurrency nagrada koju zarađuju korisnici Origin-a. Zaradite nagrade kada potvrdite svoj račun ili pozovite prijatelje da se pridruže Origin-u. Čak i dobiti OGN kao gotovinu natrag kada kupiti i prodati.",
-  "3x8LcU": "promicanje",
-  "nQxkV": "Prodavači koriste OGN za promociju svojih popisa na tržištu. To njihovim popisima omogućuje veću vidljivost i položaj. Oglasi s OGN-om imaju veće šanse da se brzo prodaju.",
-  "3IdS1u": "Počnite zarađivati tokene u roku od nekoliko minuta",
-  "3x5LAR": "Povežite svoj novčanik za kripto valutu s Podrijetlom",
-  "1rYphf": "Prijavite se i potvrdite svoj račun i prihvatljivost",
-  "xy6Hw": "Počnite zarađivati danas",
-  "1A0dWH": "Započnite",
-  "2pjq9v": "Imate pitanja?",
-  "4BVEan": "Javite se",
+  "2rolpt": "Join Origin Rewards to earn",
+  "2UiHlq": "Your friend {name} has invited you to earn",
+  "3DGyPu": "Origin Tokens",
+  "45NvfT": "Sign Up Now",
+  "4ox9Sb": "Get started by downloading Origin Marketplace - the app that allows you to buy and sell anything using crypto right from your phone.",
+  "1EEJqF": "Scan to install our app",
+  "VIbSQ": "or",
+  "3LJKn0": "Earn From Desktop",
+  "q02iR": "What are Origin Rewards?",
+  "EGUu4": "OGN is a rewards cryptocurrency earned by Origin users. Earn rewards when you verify your account or invite your friends to join Origin. Even get OGN as cash back when you buy and sell.",
   "4jRz2r": "Origin Rewards",
   "3gLqI4": "Pridružite se kampanji",
   "PhK4s": "Uvjeti nagrađivanja",
@@ -783,7 +769,7 @@
   "1R5Tqk": "Prihvaćanje uvjeta",
   "4DsgoB": "Prijavite se za Origin Rewards",
   "1oOkt7": "Pridružite se Origin nagradnom programu da biste zaradili Origin tokene (OGN). Uvjeti korištenja primjenjuju se.",
-  "157nkC": "Zarađeni OGN distribuirat će se na kraju svake kampanje. OGN je trenutno zaključan za upotrebu na platformi Origin i nije ga moguće prenijeti. Očekuje se da će OGN u budućnosti biti otključana i prenosiva.",
+  "VWMI": "Earned OGN will be distributed at the end of each campaign at the sole discretion of Origin.",
   "4weJUD": "Ulaskom u program nagrađivanja Origin slažete se da nećete prenijeti ili prodavati buduće zarađene tokene Origin drugima najmanje 1 godinu od datuma zarade svojih žetona.",
   "4vRJSg": "OGN se izdaju transakcijom koja je prvobitno izuzeta od registracije na temelju američkog Zakona o vrijednosnim papirima iz 1933., kako je izmijenjen i dopunjen (\"Zakon o vrijednosnim papirima\") i ne može se prenijeti u SAD na račun ili u korist bilo kojeg SAD-a osoba osim na temelju dostupnog izuzeća od zahtjeva za registracijom Zakona o vrijednosnim papirima i svih važećih zakona o državnim vrijednosnim papirima. Izrazi koji se gore koriste imaju značenja koja su im dana u Pravilniku S prema Zakonu o vrijednosnim papirima i svim važećim zakonima i propisima.",
   "1oPDxX": "I am not a citizen or resident of the United States of America",
@@ -1041,7 +1027,7 @@
   "qUaej": "poruke",
   "3e7Twf": "Obavijesti",
   "4yVyLH": "postavke",
-  "2sNgod": "Povratne informacije",
+  "2wfvdg": "Help",
   "3vGT5M": "Konzola",
   "1k58ts": "Više",
   "40SIOC": "Ispis",
