--- a/shah/translations/it_IT.json
+++ b/shah/translations/it_IT.json
@@ -311,7 +311,7 @@
     "growth.share.content26.title": "Investitori di livello mondiale sono convinti che Origin possa rivoluzionare l'economia della condivisione",
     "growth.share.content26.details": "Origin ha più di 500 investitori in tutto il mondo che la sostengono nella visione di abilitare il vero commercio peer to peer.",
     "growth.share.content26.link": "Guarda il video",
-    "growth.share.content27.title": "Fortune Magazine's Balancing the Ledger with Origin's Founders",
+    "growth.share.content27.title": "Rivista Fortune: Bilanciamento del Ledger assieme ai fondatori di Origin",
     "growth.share.content27.details": "In questa intervista con Fortune Magazine, i fondatori di Origin discutono della loro visione volta a creare una sharing economy veramente decentralizzata.",
     "growth.share.content27.link": "Guarda il video",
     "growth.share.content28.title": "Un fondatore di YouTube e investitore in Origin discute dei punti di forza del Team di Origin",
@@ -454,8 +454,7 @@
   "3RWPjE": "Se avete domande o bisogno di contestare una transazione, {=let us know} .",
   "1cDNp2": "facci sapere",
   "2aLpDM": "Ho capito.",
-  "23c0Qy": "Aiuto",
-  "1nLPNA": "Supporto, impostazioni e altro",
+  "27amK4": "Aiuto, Impostazioni & Altro",
   "37CWGX": "Chiudi",
   "24XkI": "Origin consente il vero commercio peer-to-peer.",
   "1jPEbl": "© 2019 Origin Protocol, Inc.",
@@ -465,7 +464,7 @@
   "3rymEt": "Informazioni su Origin",
   "4hHFe9": "Crea un Marketplace",
   "b9M5L": "Impostazioni",
-  "2aAs7W": "Fornisci un feedback",
+  "3bazax": "Aiuto",
   "dYIUq": "Guadagna oggi i token Origin",
   "2cup7z": "Partecipa alle nostre campagne e completa le attività sulla nostra DApp per ottenere i Token Origin.",
   "3PLxx0": "Vai",
@@ -681,6 +680,10 @@
   "4FezaJ": "Token guadagnati",
   "2haWvO": "Guadagni totali",
   "1YUe0g": "Totale guadagnato",
+  "uKsWN": "Campagna terminata",
+  "4fO8ds": "Il budget assegnato per questa campagna è stato raggiunto. Non ci sono più token disponibili da guadagnare in questa campagna.",
+  "1CZFEM": "Leggi il nostro {blog post}.",
+  "3xu4iO": "Per avere gli ultimi aggiornamenti su Origin Rewards, {joinTelegram}.",
   "2tRIOg": "Nessuna campagna rilevata",
   "3Dcwum": "Origin Marketplace installato",
   "Nuz99": "Referral partner",
@@ -692,9 +695,9 @@
   "2LLInS": "Completato",
   "2iDrtJ": "Unisciti a me su Origin e guadagna i token Cryptocurrency Origin (OGN). Origin è un nuovo mercato per comprare e vendere con altri utenti. Guadagna Origin Token quando crei il tuo profilo, invita i tuoi amici e compra e vendi sul mercato.",
   "1gCRzk": "Unisciti a me su Origin e guadagna i token Cryptocurrency Origin (OGN). Origin è un nuovo mercato per comprare e vendere con altri utenti. Guadagna Origin Token quando crei il tuo profilo, invita i tuoi amici e compra e vendi sul mercato.",
-  "1URGr": "Invite with Your Link",
-  "1JZLkm": "Send a friend your unique invitation link.",
-  "2FPhdN": "Copy Link",
+  "1URGr": "Invita con il tuo Link",
+  "1JZLkm": "Invia ad un amico il tuo link di invito unico.",
+  "2FPhdN": "Copia il Link",
   "1IIvYE": "Copiato",
   "20US5L": "Copia",
   "3yCrcG": "Condividi o Tweet",
@@ -745,33 +748,16 @@
   "18RyVa": "Rafforza il tuo profilo e guadagna i token di Origin completando le verifiche.",
   "wp2vP": "Completato",
   "vVUtP": "Benvenuto in Origin Protocol",
-  "jb3yU": "Invitato da",
-  "20DEff": "Il tuo amico {name} ti ha invitato a unirti a Origin",
-  "hYOWA": "Iscriviti e guadagna GRATIS token di Origin",
-  "1ABObQ": "Iscriviti a Origin oggi.",
-  "1d6tmM": "sia {firstName} che tu guadagnerete i token Cryptocurrency Origin (OGN).",
-  "swYXX": "Guadagna token aggiuntivi quando verifichi il tuo profilo, inviti i tuoi amici e compri e vendi su Origin.",
-  "1Nhta": "Iscriviti ora",
-  "3ZC0FJ": "Cos'è Origin?",
-  "35LWwH": "Origin è il primo mercato peer-to-peer costruito interamente sulla blockchain",
-  "2B59Tc": "Gratuito da utilizzare con commissioni di transazione pari allo 0%",
-  "3LGZ6f": "Navigazione e ricerca resistenti alla censura",
-  "1w6gy4": "Decine di categorie come carte regalo, homesharing, e-commerce e servizi",
-  "3RgYtu": "Cosa sono i Token Origin?",
-  "2klVRF": "I token di criptovaluta Orign (OGN) sono token ERC-20 che possono essere utilizzati sulla piattaforma in molti modi.",
-  "3FISrv": "I token Origin (OGN) guadagnati sono attualmente bloccati per essere utilizzati nell'app e nella piattaforma Origin. In questo momento non possono essere trasferiti ad altri utenti. In futuro, si prevede che gli OGN saranno sbloccati e trasferibili.",
-  "3cl6l0": "Ulteriori informazioni",
-  "2CCXRK": "Ricompense",
-  "3yDMxS": "L'OGN è una criptovaluta dei premi guadagnata dagli utenti Origin. Guadagna dei premi quando verifichi il tuo account o inviti i tuoi amici a unirsi a Origin. Anche ottenere OGN come rimborso quando acquisti e vendi.",
-  "3x8LcU": "Promozione",
-  "nQxkV": "I venditori usano gli OGN per promuovere le proprie inserzioni sul marketplace. Questo dà ai loro annunci maggiore visibilità e posizionamento. Gli annunci con OGN hanno maggiori probabilità di essere venduti rapidamente.",
-  "3IdS1u": "Inizia a guadagnare token Origin in pochi minuti",
-  "3x5LAR": "Collega il tuo portafoglio di criptovalute a Origin",
-  "1rYphf": "Iscriviti e verifica il tuo account e l'idoneità",
-  "xy6Hw": "Inizia a guadagnare oggi",
-  "1A0dWH": "Per iniziare",
-  "2pjq9v": "Hai domande?",
-  "4BVEan": "Mettiti in contatto",
+  "2rolpt": "Unisciti a Origin Rewards per guadagnare",
+  "2UiHlq": "Hai ricevuto un invito da {name} a guadagnare",
+  "3DGyPu": "i Token di Origin",
+  "45NvfT": "Iscriviti ora",
+  "4ox9Sb": "Inizia scaricando Origin Marketplace, l'app che ti consente di acquistare e vendere qualsiasi cosa usando cripto direttamente dal tuo telefono.",
+  "1EEJqF": "Scansiona per installare la nostra app",
+  "VIbSQ": "o",
+  "3LJKn0": "Inizia a Guadagnare dal Desktop",
+  "q02iR": "Cosa sono gli Origin Rewards?",
+  "EGUu4": "L'OGN è una criptovaluta data come premio agli utenti Origin. Guadagna premi quando verifichi il tuo account o inviti i tuoi amici a unirsi a Origin. E' possibile ottenere OGN anche come cashback quando acquisti e vendi.",
   "4jRz2r": "Origin Rewards",
   "3gLqI4": "Partecipa alla Campagna",
   "PhK4s": "Termini dei premi Origin",
@@ -783,7 +769,7 @@
   "1R5Tqk": "Accetta i termini",
   "4DsgoB": "Iscriviti per i premi Origin",
   "1oOkt7": "Unisciti al programma di ricompensa di Origin per guadagnare token di Origin (OGN). Si applicano i termini e condizioni.",
-  "157nkC": "L'OGN guadagnato verrà distribuito alla fine di ogni campagna. OGN è attualmente bloccato per l'utilizzo sulla piattaforma Origin e non può essere trasferito. Si prevede che OGN sarà sbloccato e trasferibile in futuro.",
+  "VWMI": "Earned OGN will be distributed at the end of each campaign at the sole discretion of Origin.",
   "4weJUD": "Partecipando al programma di premi Origin, l'utente accetta che non trasferirà o venderà i futuri gettoni Origin guadagnati ad altri per almeno 1 anno dalla data di conseguimento dei token.",
   "4vRJSg": "L'OGN è stato emesso in una transazione originariamente esentata dalla registrazione ai sensi del Securities Act statunitense del 1933, come modificato (il \"Securities Act\"), e non può essere trasferita negli Stati Uniti a, o per conto o beneficio di, qualsiasi persona US esclusa in virtù di un'esenzione disponibile dai requisiti di registrazione della Legge sui valori mobiliari e tutte le leggi applicabili sui titoli di Stato. I termini usati in precedenza hanno il significato loro attribuito nella Regulation S ai sensi della Securities Act e tutte le leggi e i regolamenti applicabili.",
   "1oPDxX": "Non sono cittadino o residente negli Stati Uniti d'America",
@@ -1041,7 +1027,7 @@
   "qUaej": "Messaggi",
   "3e7Twf": "Notifiche",
   "4yVyLH": "Impostazioni",
-  "2sNgod": "Feedback",
+  "2wfvdg": "Aiuto",
   "3vGT5M": "Console",
   "1k58ts": "Di Più",
   "40SIOC": "Annunci",
