--- a/shah/translations/vi_VN.json
+++ b/shah/translations/vi_VN.json
@@ -454,8 +454,7 @@
   "3RWPjE": "Nếu bạn có bất kỳ câu hỏi hoặc cần tranh chấp một giao dịch, {=let us know}.",
   "1cDNp2": "hãy cho chúng tôi biết",
   "2aLpDM": "Tôi đạt được rồi.",
-  "23c0Qy": "Cứu giúp",
-  "1nLPNA": "Hỗ trợ, cài đặt và hơn thế nữa",
+  "27amK4": "Help, settings, & more",
   "37CWGX": "Đóng",
   "24XkI": "Origin cho phép thương mại ngang hàng thực sự.",
   "1jPEbl": "© 2019 Origin Protocol, Inc.",
@@ -465,7 +464,7 @@
   "3rymEt": "Về nguồn gốc",
   "4hHFe9": "Tạo một thị trường",
   "b9M5L": "Cài đặt",
-  "2aAs7W": "Cung cấp thông tin phản hồi",
+  "3bazax": "Help",
   "dYIUq": "Kiếm mã thông báo nguồn gốc ngay hôm nay",
   "2cup7z": "Tham gia vào các chiến dịch của chúng tôi và hoàn thành các nhiệm vụ trên DApp của chúng tôi để kiếm Token gốc.",
   "3PLxx0": "Đi",
@@ -681,6 +680,10 @@
   "4FezaJ": "Mã thông báo kiếm được",
   "2haWvO": "Tổng Thu Nhập",
   "1YUe0g": "Tổng số tiền kiếm được",
+  "uKsWN": "Campaign Ended",
+  "4fO8ds": "The budget allocated for this campaign has been reached. No more tokens are available to earn for this campaign.",
+  "1CZFEM": "Read our {blog post}.",
+  "3xu4iO": "To get the latest updates about Origin Rewards, {joinTelegram}.",
   "2tRIOg": "Không có chiến dịch nào được phát hiện",
   "3Dcwum": "Origin Marketplace installed",
   "Nuz99": "Partner Referral",
@@ -745,33 +748,16 @@
   "18RyVa": "Tăng cường hồ sơ của bạn và kiếm Token gốc bằng cách hoàn thành xác minh.",
   "wp2vP": "Đã hoàn thành",
   "vVUtP": "Chào mừng bạn đến với Giao thức gốc",
-  "jb3yU": "Được mời bởi",
-  "20DEff": "Bạn của bạn {name} đã mời bạn tham gia Origin",
-  "hYOWA": "Đăng ký và kiếm Token gốc MIỄN PHÍ",
-  "1ABObQ": "Đăng ký Xuất xứ ngay hôm nay.",
-  "1d6tmM": "{firstName} và cả hai bạn sẽ kiếm được mã thông báo tiền điện tử gốc (OGN).",
-  "swYXX": "Kiếm thêm mã thông báo khi bạn xác minh hồ sơ của mình, mời bạn bè và mua và bán trên Origin.",
-  "1Nhta": "Đăng ký ngay",
-  "3ZC0FJ": "Nguồn gốc là gì?",
-  "35LWwH": "Origin là thị trường ngang hàng đầu tiên được xây dựng hoàn toàn trên blockchain",
-  "2B59Tc": "Sử dụng miễn phí với phí giao dịch 0%",
-  "3LGZ6f": "Duyệt và tìm kiếm chống kiểm duyệt",
-  "1w6gy4": "Hàng chục danh mục như thẻ quà tặng, nội trợ, thương mại điện tử và dịch vụ",
-  "3RgYtu": "Mã thông báo nguồn gốc là gì?",
-  "2klVRF": "Mã thông báo tiền điện tử gốc (OGN) là mã thông báo ERC-20 có thể được sử dụng trên nền tảng theo nhiều cách.",
-  "3FISrv": "Mã thông báo gốc kiếm được (OGN) hiện đang bị khóa để sử dụng trên ứng dụng và nền tảng Origin. Họ không thể được chuyển cho người dùng khác tại thời điểm này. Trong tương lai, dự kiến OGN sẽ được mở khóa và chuyển nhượng.",
-  "3cl6l0": "Tìm hiểu thêm",
-  "2CCXRK": "Phần thưởng",
-  "3yDMxS": "OGN là một loại tiền điện tử có thưởng do người dùng Origin kiếm được. Kiếm phần thưởng khi bạn xác minh tài khoản của mình hoặc mời bạn bè tham gia Origin. Thậm chí lấy OGN làm tiền mặt khi bạn mua và bán.",
-  "3x8LcU": "Thúc đẩy",
-  "nQxkV": "Người bán sử dụng OGN để quảng bá danh sách của họ trên thị trường. Điều này cho phép danh sách của họ khả năng hiển thị và vị trí cao hơn. Danh sách với OGN có cơ hội cao hơn được bán nhanh chóng.",
-  "3IdS1u": "Bắt đầu kiếm mã thông báo gốc trong vòng vài phút",
-  "3x5LAR": "Kết nối ví tiền điện tử của bạn với Origin",
-  "1rYphf": "Đăng ký và xác minh tài khoản của bạn và đủ điều kiện",
-  "xy6Hw": "Bắt đầu kiếm tiền ngay hôm nay",
-  "1A0dWH": "Bắt đầu",
-  "2pjq9v": "Có một vài câu hỏi?",
-  "4BVEan": "Liên lạc",
+  "2rolpt": "Join Origin Rewards to earn",
+  "2UiHlq": "Your friend {name} has invited you to earn",
+  "3DGyPu": "Origin Tokens",
+  "45NvfT": "Sign Up Now",
+  "4ox9Sb": "Get started by downloading Origin Marketplace - the app that allows you to buy and sell anything using crypto right from your phone.",
+  "1EEJqF": "Scan to install our app",
+  "VIbSQ": "or",
+  "3LJKn0": "Earn From Desktop",
+  "q02iR": "What are Origin Rewards?",
+  "EGUu4": "OGN is a rewards cryptocurrency earned by Origin users. Earn rewards when you verify your account or invite your friends to join Origin. Even get OGN as cash back when you buy and sell.",
   "4jRz2r": "Phần thưởng xuất xứ",
   "3gLqI4": "Tham gia chiến dịch",
   "PhK4s": "Điều khoản phần thưởng xuất xứ",
@@ -783,7 +769,7 @@
   "1R5Tqk": "Chấp nhận các điều khoản",
   "4DsgoB": "Đăng ký nhận phần thưởng xuất xứ",
   "1oOkt7": "Tham gia chương trình phần thưởng của Origin để kiếm mã thông báo Origin (OGN). Điều khoản và điều kiện áp dụng.",
-  "157nkC": "OGN kiếm được sẽ được phân phối vào cuối mỗi chiến dịch. OGN hiện đang bị khóa để sử dụng trên nền tảng Origin và không thể chuyển được. Dự kiến OGN sẽ được mở khóa và chuyển nhượng trong tương lai.",
+  "VWMI": "Earned OGN will be distributed at the end of each campaign at the sole discretion of Origin.",
   "4weJUD": "Khi tham gia chương trình phần thưởng Origin, bạn đồng ý rằng bạn sẽ không chuyển hoặc bán mã thông báo Origin kiếm được trong tương lai cho người khác trong ít nhất 1 năm kể từ ngày kiếm được mã thông báo của bạn.",
   "4vRJSg": "OGN đang được phát hành trong một giao dịch ban đầu được miễn đăng ký theo Đạo luật Chứng khoán Hoa Kỳ năm 1933, như đã sửa đổi (Đạo luật Chứng khoán Chứng minh), và không được chuyển nhượng tại Hoa Kỳ, hoặc cho tài khoản hoặc lợi ích của bất kỳ Hoa Kỳ nào người ngoại trừ theo quy định miễn trừ có sẵn đối với các yêu cầu đăng ký của Luật Chứng khoán và tất cả các luật chứng khoán nhà nước hiện hành. Các điều khoản được sử dụng ở trên có ý nghĩa được đưa ra trong Quy định S theo Luật Chứng khoán và tất cả các luật và quy định hiện hành.",
   "1oPDxX": "I am not a citizen or resident of the United States of America",
@@ -1041,7 +1027,7 @@
   "qUaej": "Tin nhắn",
   "3e7Twf": "Thông báo",
   "4yVyLH": "Cài đặt",
-  "2sNgod": "Phản hồi",
+  "2wfvdg": "Help",
   "3vGT5M": "Bảng điều khiển",
   "1k58ts": "Hơn",
   "40SIOC": "Danh sách",
