--- a/shah/translations/fil_PH.json
+++ b/shah/translations/fil_PH.json
@@ -454,8 +454,7 @@
   "3RWPjE": "Kung mayroon kang anumang mga katanungan o kailangang makipagtalo sa isang transaksyon, {=let us know}.",
   "1cDNp2": "ipaalam sa amin",
   "2aLpDM": "Nakuha ko na.",
-  "23c0Qy": "Tulong",
-  "1nLPNA": "Suporta, setting, at iba pa",
+  "27amK4": "Help, settings, & more",
   "37CWGX": "Isara",
   "24XkI": "Pinapagana ng pinagmulan ang totoong commerce ng peer-to-peer.",
   "1jPEbl": "© 2019 Pinagmulan Protocol, Inc.",
@@ -465,7 +464,7 @@
   "3rymEt": "Tungkol sa Pinagmulan",
   "4hHFe9": "Lumikha ng isang Pamilihan",
   "b9M5L": "Mga setting",
-  "2aAs7W": "Bigyan ng Feedback",
+  "3bazax": "Help",
   "dYIUq": "Kumita ng Mga Tula ng Pinagmulan Ngayon",
   "2cup7z": "Makilahok sa aming mga kampanya at kumpletong mga gawain sa aming DApp upang kumita ng Mga Token ng Pinagmulan.",
   "3PLxx0": "Pumunta",
@@ -681,6 +680,10 @@
   "4FezaJ": "Nakuha ang mga token",
   "2haWvO": "Kabuuang Mga Kinita",
   "1YUe0g": "Kabuuan na kinita",
+  "uKsWN": "Campaign Ended",
+  "4fO8ds": "The budget allocated for this campaign has been reached. No more tokens are available to earn for this campaign.",
+  "1CZFEM": "Read our {blog post}.",
+  "3xu4iO": "To get the latest updates about Origin Rewards, {joinTelegram}.",
   "2tRIOg": "Walang natagpuan ang mga kampanya",
   "3Dcwum": "Origin Marketplace installed",
   "Nuz99": "Partner Referral",
@@ -745,33 +748,16 @@
   "18RyVa": "Palakasin ang iyong profile at kumita ng Mga Pinagmulan na Token sa pamamagitan ng pagkumpleto ng mga pag-verify.",
   "wp2vP": "Nakumpleto",
   "vVUtP": "Maligayang pagdating sa Pinagmulang Protocol",
-  "jb3yU": "Inimbitahan ng",
-  "20DEff": "Inanyayahan ka ng iyong kaibigan {name} na sumali sa Pinagmulan",
-  "hYOWA": "Mag-sign up at kumita ng FREE Origin Tokens",
-  "1ABObQ": "Mag-sign up para sa Pinagmulan ngayon.",
-  "1d6tmM": "{firstName} at magkakaroon ka ng parehong Katangian ng cryptocurrency token (OGN).",
-  "swYXX": "Kumita ng karagdagang mga token kapag na-verify mo ang iyong profile, anyayahan ang iyong mga kaibigan, at bumili at magbenta sa Pinagmulan.",
-  "1Nhta": "Mag-sign Up Ngayon",
-  "3ZC0FJ": "Ano ang Pinagmulan?",
-  "35LWwH": "Pinagmulan ay ang unang merkado ng peer-to-peer na ganap na binuo sa blockchain",
-  "2B59Tc": "Libre upang magamit sa 0% na bayarin sa transaksyon",
-  "3LGZ6f": "Censorship-resistant browsing at searching",
-  "1w6gy4": "Dose-dosenang mga kategorya tulad ng mga gift card, homesharing, ecommerce, at serbisyo",
-  "3RgYtu": "Ano ang Mga Token ng Pinagmulan?",
-  "2klVRF": "Ang mga pinagmulang cryptocurrency token (OGN) ay ERC-20 na mga token na magagamit sa platform sa maraming paraan.",
-  "3FISrv": "Ang Mga Kinitang Token sa Pinagmulan (OGN) ay kasalukuyang naka-lock para sa paggamit sa Pinagmulan ng app at platform. Hindi sila maililipat sa iba pang mga gumagamit sa oras na ito. Sa hinaharap, inaasahan na ang OGN ay mai-unlock at maililipat.",
-  "3cl6l0": "Matuto pa",
-  "2CCXRK": "Gantimpala",
-  "3yDMxS": "Ang OGN ay isang reward cryptocurrency na kinita ng mga gumagamit ng Pinagmulan. Kumita ng mga gantimpala kapag na-verify mo ang iyong account o anyayahan ang iyong mga kaibigan na sumali sa Pinagmulan. Kahit na makakuha ng OGN bilang cash back kapag bumili ka at nagbebenta.",
-  "3x8LcU": "Pagsusulong",
-  "nQxkV": "Ginagamit ng mga nagbebenta ang OGN upang maisulong ang kanilang mga listahan sa merkado. Nagbibigay ito sa kanilang mga listahan ng mas mataas na kakayahang makita at pagkakalagay. Ang mga listahan kasama ang OGN ay may mas mataas na posibilidad na mabenta nang mabilis.",
-  "3IdS1u": "Simulan ang pagkamit ng mga token ng Pinagmulan sa loob ng ilang minuto",
-  "3x5LAR": "Ikonekta ang iyong cryptocurrency wallet sa Pinanggalingan",
-  "1rYphf": "Mag-sign up at i-verify ang iyong account at pagiging karapat-dapat",
-  "xy6Hw": "Magsimulang kumita ngayon",
-  "1A0dWH": "Magsimula",
-  "2pjq9v": "May mga tanong?",
-  "4BVEan": "Makipag-ugnayan",
+  "2rolpt": "Join Origin Rewards to earn",
+  "2UiHlq": "Your friend {name} has invited you to earn",
+  "3DGyPu": "Origin Tokens",
+  "45NvfT": "Sign Up Now",
+  "4ox9Sb": "Get started by downloading Origin Marketplace - the app that allows you to buy and sell anything using crypto right from your phone.",
+  "1EEJqF": "Scan to install our app",
+  "VIbSQ": "or",
+  "3LJKn0": "Earn From Desktop",
+  "q02iR": "What are Origin Rewards?",
+  "EGUu4": "OGN is a rewards cryptocurrency earned by Origin users. Earn rewards when you verify your account or invite your friends to join Origin. Even get OGN as cash back when you buy and sell.",
   "4jRz2r": "Mga Gantimpala ng Pinagmulan",
   "3gLqI4": "Sumali sa Kampanya",
   "PhK4s": "Mga Tuntunin sa Mga Gantimpala ng Mga Gantimpala",
@@ -783,7 +769,7 @@
   "1R5Tqk": "Tanggapin ang Mga Tuntunin",
   "4DsgoB": "Mag-sign up para sa Mga Gantimpala ng Pinagmulan",
   "1oOkt7": "Sumali sa programang gantimpala ng Pinagmulan upang kumita ng Mga Pinagmulan na token (OGN). Nalalapat ang mga tuntunin at kundisyon",
-  "157nkC": "Kumita ng OGN ay ibabahagi sa pagtatapos ng bawat kampanya. Ang OGN ay kasalukuyang naka-lock para magamit sa platform ng Pinagmulan at hindi maililipat. Inaasahan na ang OGN ay mai-lock at maililipat sa hinaharap.",
+  "VWMI": "Earned OGN will be distributed at the end of each campaign at the sole discretion of Origin.",
   "4weJUD": "Sa pamamagitan ng pagsali sa programa ng Gantimpala ng gantimpala, sumasang-ayon ka na hindi mo ililipat o ibebenta ang mga nakuhang mga token ng Pinagmulan sa iba nang hindi bababa sa 1 taon mula sa petsa ng pagkamit ng iyong mga token.",
   "4vRJSg": "Ang OGN ay inisyu sa isang transaksyon na orihinal na exempt mula sa pagpaparehistro sa ilalim ng US Securities Act of 1933, bilang susugan (ang \"Securities Act\"), at maaaring hindi maililipat sa Estados Unidos sa, o para sa account o pakinabang ng, anumang US tao maliban sa alinsunod sa isang magagamit na pag-aalis mula sa mga kinakailangan sa pagpaparehistro ng Securities Act at lahat ng naaangkop na mga batas sa estado ng seguridad. Ang mga tuntunin na ginamit sa itaas ay may mga kahulugan na ibinigay sa kanila sa Regulasyon S sa ilalim ng Securities Act at lahat ng naaangkop na mga batas at regulasyon.",
   "1oPDxX": "I am not a citizen or resident of the United States of America",
@@ -1041,7 +1027,7 @@
   "qUaej": "Mga mensahe",
   "3e7Twf": "Mga Abiso",
   "4yVyLH": "Mga setting",
-  "2sNgod": "Feedback",
+  "2wfvdg": "Help",
   "3vGT5M": "Console",
   "1k58ts": "Marami pa",
   "40SIOC": "Mga Listahan",
