--- a/shah/translations/fr_FR.json
+++ b/shah/translations/fr_FR.json
@@ -454,8 +454,7 @@
   "3RWPjE": "Si vous avez des questions ou avez besoin de contester une transaction, appuyez sur {=let us know}.",
   "1cDNp2": "laissez nous savoir",
   "2aLpDM": "J? ai compris.",
-  "23c0Qy": "Aide",
-  "1nLPNA": "Support, paramètres, & plus",
+  "27amK4": "Aide, Paramètres, & plus",
   "37CWGX": "Fermer",
   "24XkI": "Origin permet un véritable commerce d'égal à égal.",
   "1jPEbl": "© 2019 Origin Protocol, Inc.",
@@ -465,7 +464,7 @@
   "3rymEt": "À propos d'Origin",
   "4hHFe9": "Créez un Marché",
   "b9M5L": "Réglages",
-  "2aAs7W": "Donnez vos Retours",
+  "3bazax": "Aide",
   "dYIUq": "Gagnez des jetons Origin aujourd'hui",
   "2cup7z": "Participez à nos campagnes et complétez les tâches de notre DApp pour gagner des jetons d’origine.",
   "3PLxx0": "Aller",
@@ -681,6 +680,10 @@
   "4FezaJ": "Jetons gagnés",
   "2haWvO": "Gains Totaux",
   "1YUe0g": "Total gagné",
+  "uKsWN": "Campaign Ended",
+  "4fO8ds": "The budget allocated for this campaign has been reached. No more tokens are available to earn for this campaign.",
+  "1CZFEM": "Read our {blog post}.",
+  "3xu4iO": "To get the latest updates about Origin Rewards, {joinTelegram}.",
   "2tRIOg": "Aucune campagne détectée",
   "3Dcwum": "Origin Marketplace a été installé",
   "Nuz99": "Références partenaires",
@@ -692,9 +695,9 @@
   "2LLInS": "Terminé",
   "2iDrtJ": "Rejoignez-moi sur Origin et gagnez des jetons de crypto-monnaie Origin (OGN). Origin est un nouveau marché pour acheter et vendre avec d’autres utilisateurs. Gagnez des jetons Origin lorsque vous créez votre profil, invitez vos amis, achetez et vendez sur le marché.",
   "1gCRzk": "Rejoignez-moi sur Origin et gagnez des jetons de crypto-monnaie Origin (OGN). Origin est un nouveau marché pour acheter et vendre avec d’autres utilisateurs. Gagnez des jetons Origin lorsque vous créez votre profil, invitez vos amis, achetez et vendez sur le marché.",
-  "1URGr": "Invite with Your Link",
-  "1JZLkm": "Send a friend your unique invitation link.",
-  "2FPhdN": "Copy Link",
+  "1URGr": "Inviter avec votre lien",
+  "1JZLkm": "Envoyez votre lien d'invitation unique à votre ami.",
+  "2FPhdN": "Copier le lien",
   "1IIvYE": "Copié",
   "20US5L": "Copie",
   "3yCrcG": "Partager ou Tweet",
@@ -745,33 +748,16 @@
   "18RyVa": "Renforcez votre profil et gagnez des jetons Origin en complétant toutes les vérifications.",
   "wp2vP": "Terminé",
   "vVUtP": "Bienvenue dans le protocole d'origine",
-  "jb3yU": "Inviter par",
-  "20DEff": "Votre ami {name} vous a invité à rejoindre Origin",
-  "hYOWA": "Inscrivez-vous et gagnez des jetons Origin GRATUIT",
-  "1ABObQ": "Inscrivez-vous à Origin aujourd'hui.",
-  "1d6tmM": "{firstName} et vous gagnerez tous les deux des jetons de crypto-monnaie Origin (OGN).",
-  "swYXX": "Gagnez des jetons supplémentaires lorsque vous vérifiez votre profil, invitez vos amis, et achetez et vendez sur Origin.",
-  "1Nhta": "S'inscrire maintenant",
-  "3ZC0FJ": "Qu-est-ce qu'Origin?",
-  "35LWwH": "Origin est le premier marché de vente de particulier-à-particulier entièrement construit sur la blockchain",
-  "2B59Tc": "Libre d'utilisation avec 0% de frais de transaction",
-  "3LGZ6f": "Navigation et recherche résistantes à la censure",
-  "1w6gy4": "Des dizaines de catégories comme les cartes-cadeaux, le partage de maison, le commerce électronique et les services",
-  "3RgYtu": "À quoi servent les tokens Origin?",
-  "2klVRF": "Les jetons de crypto-monnaie Origin (OGN) sont des jetons ERC-20 pouvant être utilisés sur la plate-forme de nombreuses manières.",
-  "3FISrv": "Les jetons Origin (OGN) gagnés sont actuellement verrouillés pour une utilisation sur l'application et la plateforme Origin. Ils ne peuvent pas être transférés à d'autres utilisateurs pour le moment. À l'avenir, il est prévu que les jetons seront débloqués et transférables.",
-  "3cl6l0": "En savoir plus",
-  "2CCXRK": "Récompenses",
-  "3yDMxS": "OGN est un crypto-monnaie de récompenses gagné par les utilisateurs d’Origin. Obtenez des récompenses lorsque vous vérifiez votre compte, invitez vos amis à rejoindre Origin ou quand vous achetez et vendez.",
-  "3x8LcU": "Promotion",
-  "nQxkV": "Les vendeurs utilisent OGN pour promouvoir leurs annonces sur le marché. Cela donne à leurs annonces une visibilité et un placement plus importants. Les annonces avec OGN ont plus de chance d'être vendues rapidement.",
-  "3IdS1u": "Commencez à gagner des jetons Origin en quelques minutes",
-  "3x5LAR": "Connectez votre portefeuille de crypto-monnaie à Origin",
-  "1rYphf": "Inscrivez-vous et vérifiez votre compte et votre éligibilité",
-  "xy6Hw": "Commencez à gagner aujourd'hui",
-  "1A0dWH": "Commencer",
-  "2pjq9v": "Des questions?",
-  "4BVEan": "Entrer en contact",
+  "2rolpt": "Rejoignez Origin Rewards pour gagner",
+  "2UiHlq": "Votre ami {name} vous a invité à gagner",
+  "3DGyPu": "Jetons Origin",
+  "45NvfT": "S'inscrire maintenant",
+  "4ox9Sb": "Commencez par télécharger Origin Marketplace - l'application qui vous permet d'acheter et de vendre n'importe quoi en utilisant la cryptographie directement depuis votre téléphone.",
+  "1EEJqF": "Scannez pour installer notre application",
+  "VIbSQ": "ou",
+  "3LJKn0": "Récompenses pour PC de bureau",
+  "q02iR": "Que sont les récompenses Origin ?",
+  "EGUu4": "OGN est une crypto-monnaie de récompense gagnée par les utilisateurs d'Origin. Gagnez des récompenses lorsque vous vérifiez votre compte ou invitez vos amis à rejoindre Origin. Obtenez même OGN comme remise en argent lorsque vous achetez et vendez.",
   "4jRz2r": "Récompenses Origin",
   "3gLqI4": "Rejoindre Campagne",
   "PhK4s": "Conditions des récompenses Origin",
@@ -783,7 +769,7 @@
   "1R5Tqk": "Accepter les termes",
   "4DsgoB": "Inscrivez-vous à Origin Rewards",
   "1oOkt7": "Rejoignez le programme de récompenses Origin pour gagner des jetons Origin (OGN). Des termes et conditions s'appliquent.",
-  "157nkC": "Les OGN gagnés seront distribués à la fin de chaque campagne. Les OGN ne sont actuellement utilisables que sur la plateforme Origin et ne peuvent pas être transférés. Il est prévu de débloquer les OGN, de les rendre utilisables et transférables ailleurs, plus tard.",
+  "VWMI": "Earned OGN will be distributed at the end of each campaign at the sole discretion of Origin.",
   "4weJUD": "En rejoignant le programme de récompenses Origin, vous acceptez de ne pas transférer ou vendre les futurs jetons Origin que vous gagnerez pendant minimum 1 an après avoir gagné ces jetons.",
   "4vRJSg": "Les OGN sont émis dans le cadre d’une transaction initialement exempte d’enregistrement en vertu du US Securities Act of 1933, tel que modifié (le «Securities Act»), et ne peuvent être transférés aux États-Unis à un compte américain, ni pour le compte ou au profit de ceux-ci. personne, sauf en vertu d’une exemption possible des exigences d’inscription de la Securities Act et de toutes les lois applicables sur les valeurs mobilières des États. Les termes utilisés ci-dessus ont la signification qui leur est donnée dans le règlement S de la loi sur les valeurs mobilières et dans toutes les lois et tous les règlements applicables.",
   "1oPDxX": "Je ne suis pas citoyen ou résidant des États-Unis d'Amérique",
@@ -1041,7 +1027,7 @@
   "qUaej": "Messages",
   "3e7Twf": "Les notifications",
   "4yVyLH": "Paramètres",
-  "2sNgod": "Retours",
+  "2wfvdg": "Aide",
   "3vGT5M": "Console",
   "1k58ts": "Plus",
   "40SIOC": "Annonces",
