--- a/shah/translations/id_ID.json
+++ b/shah/translations/id_ID.json
@@ -454,8 +454,7 @@
   "3RWPjE": "Jika Anda memiliki pertanyaan atau perlu mempersengketakan suatu transaksi, {=let us know}.",
   "1cDNp2": "Beritahu kami",
   "2aLpDM": "Saya mendapatkannya.",
-  "23c0Qy": "Tolong",
-  "1nLPNA": "Dukungan, pengaturan, & lainnya",
+  "27amK4": "Help, settings, & more",
   "37CWGX": "Dekat",
   "24XkI": "Asal memungkinkan perdagangan peer-to-peer sejati.",
   "1jPEbl": "© 2019 Origin Protocol, Inc.",
@@ -465,7 +464,7 @@
   "3rymEt": "Tentang Asal",
   "4hHFe9": "Buat Marketplace",
   "b9M5L": "Pengaturan",
-  "2aAs7W": "Berikan umpan balik",
+  "3bazax": "Help",
   "dYIUq": "Hasilkan Token Asal Hari Ini",
   "2cup7z": "Berpartisipasilah dalam kampanye kami dan selesaikan tugas di DApp kami untuk mendapatkan Token Asal.",
   "3PLxx0": "Pergi",
@@ -681,6 +680,10 @@
   "4FezaJ": "Token diterima",
   "2haWvO": "Total Penghasilan",
   "1YUe0g": "Total yang diterima",
+  "uKsWN": "Campaign Ended",
+  "4fO8ds": "The budget allocated for this campaign has been reached. No more tokens are available to earn for this campaign.",
+  "1CZFEM": "Read our {blog post}.",
+  "3xu4iO": "To get the latest updates about Origin Rewards, {joinTelegram}.",
   "2tRIOg": "Tidak ada kampanye yang terdeteksi",
   "3Dcwum": "Origin Marketplace installed",
   "Nuz99": "Partner Referral",
@@ -745,33 +748,16 @@
   "18RyVa": "Perkuat profil Anda dan dapatkan Token Asal dengan melengkapi verifikasi.",
   "wp2vP": "Lengkap",
   "vVUtP": "Selamat datang di Protokol Asal",
-  "jb3yU": "Diundang oleh",
-  "20DEff": "Teman Anda {name} telah mengundang Anda untuk bergabung dengan Origin",
-  "hYOWA": "Daftar dan dapatkan Token Asal GRATIS",
-  "1ABObQ": "Mendaftar untuk Asal hari ini.",
-  "1d6tmM": "{firstName} dan Anda berdua akan mendapatkan token cryptocurrency Asal (OGN)",
-  "swYXX": "Hasilkan token tambahan saat Anda memverifikasi profil Anda, mengundang teman-teman Anda, dan membeli dan menjual pada Asal.",
-  "1Nhta": "Daftar sekarang",
-  "3ZC0FJ": "Apa itu asal?",
-  "35LWwH": "Origin adalah pasar peer-to-peer pertama yang dibangun sepenuhnya di blockchain",
-  "2B59Tc": "Gratis untuk digunakan dengan biaya transaksi 0%",
-  "3LGZ6f": "Penjelajahan dan pencarian yang tahan sensor",
-  "1w6gy4": "Puluhan kategori seperti kartu hadiah, homesharing, e-commerce, dan layanan",
-  "3RgYtu": "Apa itu Token Asal?",
-  "2klVRF": "Token cryptocurrency asal (OGN) adalah token ERC-20 yang dapat digunakan pada platform dalam banyak cara.",
-  "3FISrv": "Token Asal yang Diperoleh (OGN) saat ini dikunci untuk digunakan pada aplikasi dan platform Asal. Mereka tidak dapat ditransfer ke pengguna lain saat ini. Di masa depan, diharapkan OGN akan dibuka dan ditransfer.",
-  "3cl6l0": "Pelajari lebih lanjut",
-  "2CCXRK": "Hadiah",
-  "3yDMxS": "OGN adalah cryptocurrency penghargaan yang diterima oleh pengguna Asal. Dapatkan imbalan saat Anda memverifikasi akun Anda atau mengundang teman Anda untuk bergabung dengan Origin. Bahkan dapatkan OGN sebagai uang kembali saat Anda membeli dan menjual.",
-  "3x8LcU": "Mempromosikan",
-  "nQxkV": "Penjual menggunakan OGN untuk mempromosikan listing mereka di pasar. Ini memberikan listing mereka visibilitas dan penempatan yang lebih tinggi. Daftar dengan OGN memiliki peluang lebih tinggi untuk dijual dengan cepat.",
-  "3IdS1u": "Mulai dapatkan token Asal dalam beberapa menit",
-  "3x5LAR": "Hubungkan dompet cryptocurrency Anda ke Origin",
-  "1rYphf": "Daftar dan verifikasi akun dan kelayakan Anda",
-  "xy6Hw": "Mulailah menghasilkan hari ini",
-  "1A0dWH": "Memulai",
-  "2pjq9v": "Punya pertanyaan?",
-  "4BVEan": "Berhubungan",
+  "2rolpt": "Join Origin Rewards to earn",
+  "2UiHlq": "Your friend {name} has invited you to earn",
+  "3DGyPu": "Origin Tokens",
+  "45NvfT": "Sign Up Now",
+  "4ox9Sb": "Get started by downloading Origin Marketplace - the app that allows you to buy and sell anything using crypto right from your phone.",
+  "1EEJqF": "Scan to install our app",
+  "VIbSQ": "or",
+  "3LJKn0": "Earn From Desktop",
+  "q02iR": "What are Origin Rewards?",
+  "EGUu4": "OGN is a rewards cryptocurrency earned by Origin users. Earn rewards when you verify your account or invite your friends to join Origin. Even get OGN as cash back when you buy and sell.",
   "4jRz2r": "Asal Hadiah",
   "3gLqI4": "Bergabung dengan Kampanye",
   "PhK4s": "Ketentuan Hadiah Asal",
@@ -783,7 +769,7 @@
   "1R5Tqk": "Terima Ketentuan",
   "4DsgoB": "Mendaftar untuk Hadiah Asal",
   "1oOkt7": "Bergabunglah dengan program hadiah Origin untuk mendapatkan token Asal (OGN). Syarat dan ketentuan berlaku.",
-  "157nkC": "OGN yang diperoleh akan didistribusikan pada akhir setiap kampanye. OGN saat ini dikunci untuk penggunaan pada platform Asal dan tidak dapat ditransfer. Diharapkan bahwa OGN akan dibuka dan ditransfer di masa depan.",
+  "VWMI": "Earned OGN will be distributed at the end of each campaign at the sole discretion of Origin.",
   "4weJUD": "Dengan bergabung dengan program hadiah Asal, Anda setuju bahwa Anda tidak akan mentransfer atau menjual token Asal yang diterima di masa mendatang kepada orang lain setidaknya selama 1 tahun dari tanggal perolehan token Anda.",
   "4vRJSg": "OGN dikeluarkan dalam transaksi yang pada awalnya dibebaskan dari pendaftaran berdasarkan US Securities Act of 1933, sebagaimana telah diubah (\"Securities Act\"), dan tidak dapat ditransfer di Amerika Serikat ke, atau untuk akun atau manfaat dari, AS orang kecuali sesuai dengan pengecualian yang tersedia dari persyaratan registrasi Securities Act dan semua undang-undang sekuritas negara yang berlaku. Istilah yang digunakan di atas memiliki arti yang diberikan kepada mereka dalam Peraturan S di bawah Securities Act dan semua hukum dan peraturan yang berlaku.",
   "1oPDxX": "I am not a citizen or resident of the United States of America",
@@ -1041,7 +1027,7 @@
   "qUaej": "Pesan",
   "3e7Twf": "Notifikasi",
   "4yVyLH": "Pengaturan",
-  "2sNgod": "Umpan balik",
+  "2wfvdg": "Help",
   "3vGT5M": "Menghibur",
   "1k58ts": "Lebih",
   "40SIOC": "Daftar",
