--- a/shah/translations/ja_JP.json
+++ b/shah/translations/ja_JP.json
@@ -454,8 +454,7 @@
   "3RWPjE": "質問がある場合、または取引について異議を唱える必要がある場合は、 {=let us know}。",
   "1cDNp2": "私たちに知らせて",
   "2aLpDM": "わかりました",
-  "23c0Qy": "ヘルプ",
-  "1nLPNA": "サポート、設定など",
+  "27amK4": "Help, settings, & more",
   "37CWGX": "閉じる",
   "24XkI": "Originは本当のP2P取引を可能にします。",
   "1jPEbl": "© 2019 Origin Protocol, Inc.",
@@ -465,7 +464,7 @@
   "3rymEt": "Originについて",
   "4hHFe9": "マーケットプレイスを作成する",
   "b9M5L": "設定",
-  "2aAs7W": "フィードバックする",
+  "3bazax": "Help",
   "dYIUq": "いますぐOriginトークンを獲得しましょう",
   "2cup7z": "キャンペーンに参加し、DApp上でタスクを完了するとOriginトークンを獲得できます",
   "3PLxx0": "続ける",
@@ -681,6 +680,10 @@
   "4FezaJ": "獲得したトークン",
   "2haWvO": "総収益",
   "1YUe0g": "獲得合計",
+  "uKsWN": "Campaign Ended",
+  "4fO8ds": "The budget allocated for this campaign has been reached. No more tokens are available to earn for this campaign.",
+  "1CZFEM": "Read our {blog post}.",
+  "3xu4iO": "To get the latest updates about Origin Rewards, {joinTelegram}.",
   "2tRIOg": "キャンペーンがみつかりません",
   "3Dcwum": "Origin Marketplace installed",
   "Nuz99": "Partner Referral",
@@ -745,33 +748,16 @@
   "18RyVa": "認証を完了することで、プロフィールを強化し、OGN Tokenを獲得できます。",
   "wp2vP": "完了",
   "vVUtP": "Originプロトコルへようこそ",
-  "jb3yU": "からの招待",
-  "20DEff": "あなたの友達 {name} があなたをOriginに招待しています",
-  "hYOWA": "サインアップして無料のOrigin Tokenを獲得する",
-  "1ABObQ": "早速、Originに登録してください。",
-  "1d6tmM": "{firstName} とあなたの双方がOriginトークン（OGN）を獲得します。",
-  "swYXX": "プロフィールの接続と承認、友人の招待、またはOriginで売買が成功した時に、追加でトークンが獲得できます。",
-  "1Nhta": "今すぐサインアップ",
-  "3ZC0FJ": "Originとは何ですか？",
-  "35LWwH": "Originは完全にブロックチェーン上に構築された世界初のピアツーピアマーケットプレイスです。",
-  "2B59Tc": "0％の取引手数料で無料で使用できます",
-  "3LGZ6f": "検閲に強いブラウジングと検索",
-  "1w6gy4": "ギフトカード、ホームシェアリング、eコマース、サービスなどの数十のカテゴリが有ります。",
-  "3RgYtu": "Originトークンとは何ですか？",
-  "2klVRF": "Originトークン（OGN）は、プラットフォームで様々な目的で使用できるERC-20トークンです。",
-  "3FISrv": "獲得された Origin トークン（OGN）は現在Originアプリとプラットフォームでの使用がロックされています。現時点では他のユーザーに転送することはできません。将来的には、OGNのロックが解除され、転送可能になります。",
-  "3cl6l0": "詳細について",
-  "2CCXRK": "報酬",
-  "3yDMxS": "OGNはOriginのユーザが獲得できる報酬です。自分のアカウント情報を承認したり、友達をOriginに招待したりして報酬を獲得しましょう。また、売買でもOGNをキャッシュバックで獲得する事もできます。",
-  "3x8LcU": "プロモーション",
-  "nQxkV": "売り手はOGNを使用してマーケットプレイスで出品情報をプロモーションできます。プロモーションを行うと、その情報は目立つように配置されるので 売買の成功率がとても高くなります。",
-  "3IdS1u": "さっそくOriginトークンを獲得する",
-  "3x5LAR": "ウォレットをOriginに接続する",
-  "1rYphf": "サインアップしてアカウント情報を承認してください",
-  "xy6Hw": "さっそく収益をつくりましょう",
-  "1A0dWH": "はじめに",
-  "2pjq9v": "質問がありますか？",
-  "4BVEan": "連絡する",
+  "2rolpt": "Join Origin Rewards to earn",
+  "2UiHlq": "Your friend {name} has invited you to earn",
+  "3DGyPu": "Origin Tokens",
+  "45NvfT": "Sign Up Now",
+  "4ox9Sb": "Get started by downloading Origin Marketplace - the app that allows you to buy and sell anything using crypto right from your phone.",
+  "1EEJqF": "Scan to install our app",
+  "VIbSQ": "or",
+  "3LJKn0": "Earn From Desktop",
+  "q02iR": "What are Origin Rewards?",
+  "EGUu4": "OGN is a rewards cryptocurrency earned by Origin users. Earn rewards when you verify your account or invite your friends to join Origin. Even get OGN as cash back when you buy and sell.",
   "4jRz2r": "Origin報酬",
   "3gLqI4": "キャンペーンに参加する",
   "PhK4s": "Origin報酬規約",
@@ -783,7 +769,7 @@
   "1R5Tqk": "利用規約に同意する",
   "4DsgoB": "Originリワードにサインアップ",
   "1oOkt7": "Originのリワードプログラムに参加して、Originトークン（OGN）を獲得してください。これには、規約が適用されます。",
-  "157nkC": "獲得したOGNは、各キャンペーンの最後に配布されます。 OGNは現在、Originプラットフォームでの使用がロックされており、転送できません。 これは将来解除され、譲渡可能になる予定です。",
+  "VWMI": "Earned OGN will be distributed at the end of each campaign at the sole discretion of Origin.",
   "4weJUD": "Originリワードプログラムに参加することにより、トークンを獲得した日から少なくとも1年間、獲得したOriginトークンを他者に譲渡または販売しないことに同意します。",
   "4vRJSg": "OGNは、もともと1933年の米国証券法の下で修正された（「証券法」）登録から免除された取引で発行されており、米国で、または米国の口座または利益のために譲渡することはできません。証券法および該当するすべての州証券法の登録要件の利用可能な免除に従う場合を除き、個人。上記で使用されている用語は、証券法および適用されるすべての法律および規制に基づく規則で与えられている意味を持ちます。",
   "1oPDxX": "I am not a citizen or resident of the United States of America",
@@ -1041,7 +1027,7 @@
   "qUaej": "メッセージ",
   "3e7Twf": "通知",
   "4yVyLH": "設定",
-  "2sNgod": "フィードバック",
+  "2wfvdg": "Help",
   "3vGT5M": "コンソール",
   "1k58ts": "詳細",
   "40SIOC": "出品情報",
