--- a/shah/translations/nl_NL.json
+++ b/shah/translations/nl_NL.json
@@ -454,8 +454,7 @@
   "3RWPjE": "Als u vragen heeft of een transactie moet betwisten, {=let us know}.",
   "1cDNp2": "laat het ons weten",
   "2aLpDM": "Ik heb het begrepen.",
-  "23c0Qy": "Helpen",
-  "1nLPNA": "Ondersteuning, instellingen en meer",
+  "27amK4": "Help, settings, & more",
   "37CWGX": "Dichtbij",
   "24XkI": "Origin maakt echte peer-to-peer commerce mogelijk.",
   "1jPEbl": "© 2019 Origin Protocol, Inc.",
@@ -465,7 +464,7 @@
   "3rymEt": "Over oorsprong",
   "4hHFe9": "Maak een marktplaats",
   "b9M5L": "instellingen",
-  "2aAs7W": "Geef feedback",
+  "3bazax": "Help",
   "dYIUq": "Verdien origin tokens vandaag",
   "2cup7z": "Neem deel aan onze campagnes en voltooi taken op onze DApp om Origin Tokens te verdienen.",
   "3PLxx0": "Gaan",
@@ -681,6 +680,10 @@
   "4FezaJ": "Verdiende tokens",
   "2haWvO": "totale winst",
   "1YUe0g": "Totaal verdiend",
+  "uKsWN": "Campaign Ended",
+  "4fO8ds": "The budget allocated for this campaign has been reached. No more tokens are available to earn for this campaign.",
+  "1CZFEM": "Read our {blog post}.",
+  "3xu4iO": "To get the latest updates about Origin Rewards, {joinTelegram}.",
   "2tRIOg": "Geen campagnes gedetecteerd",
   "3Dcwum": "Origin Marketplace installed",
   "Nuz99": "Partner Referral",
@@ -745,33 +748,16 @@
   "18RyVa": "Versterk je profiel en verdien Origin-tokens door verificaties te voltooien.",
   "wp2vP": "Voltooid",
   "vVUtP": "Welkom bij Origin Protocol",
-  "jb3yU": "Uitgenodigd door",
-  "20DEff": "Je vriend {name} heeft je uitgenodigd om lid te worden van Origin",
-  "hYOWA": "Meld u aan en verdien GRATIS Origin Tokens",
-  "1ABObQ": "Meld je vandaag nog aan voor Origin.",
-  "1d6tmM": "{firstName} en je verdient allebei Origin cryptocurrency tokens (OGN).",
-  "swYXX": "Verdien extra tokens wanneer u uw profiel verifieert, uw vrienden uitnodigt en op Origin koopt en verkoopt.",
-  "1Nhta": "Meld je nu aan",
-  "3ZC0FJ": "Wat is oorsprong?",
-  "35LWwH": "Origin is de eerste peer-to-peer marktplaats die volledig is gebouwd op de blockchain",
-  "2B59Tc": "Gratis te gebruiken met 0% transactiekosten",
-  "3LGZ6f": "Censuurbestendig browsen en zoeken",
-  "1w6gy4": "Tientallen categorieën zoals cadeaubonnen, homesharing, e-commerce en services",
-  "3RgYtu": "Wat zijn Origin Tokens?",
-  "2klVRF": "Origin cryptocurrency tokens (OGN) zijn ERC-20-tokens die op veel manieren op het platform kunnen worden gebruikt.",
-  "3FISrv": "Earned Origin tokens (OGN) zijn momenteel vergrendeld voor gebruik op de Origin-app en het platform. Ze kunnen op dit moment niet worden overgedragen aan andere gebruikers. In de toekomst wordt verwacht dat OGN wordt ontgrendeld en overdraagbaar.",
-  "3cl6l0": "Meer informatie",
-  "2CCXRK": "beloningen",
-  "3yDMxS": "OGN is een rewards cryptocurrency verdiend door Origin-gebruikers. Verdien beloningen wanneer u uw account verifieert of nodig uw vrienden uit om lid te worden van Origin. Haal OGN zelfs als geld terug wanneer u koopt en verkoopt.",
-  "3x8LcU": "Bevorderen",
-  "nQxkV": "Verkopers gebruiken OGN om hun aanbiedingen op de markt te promoten. Dit geeft hun lijsten een betere zichtbaarheid en plaatsing. Lijsten met OGN hebben een grotere kans om snel te worden verkocht.",
-  "3IdS1u": "Begin met het binnen enkele minuten verdienen van Origin-tokens",
-  "3x5LAR": "Verbind uw cryptocurrency wallet met Origin",
-  "1rYphf": "Meld u aan en verifieer uw account en geschiktheid",
-  "xy6Hw": "Begin vandaag met verdienen",
-  "1A0dWH": "Begin",
-  "2pjq9v": "Vragen hebben?",
-  "4BVEan": "Neem contact op",
+  "2rolpt": "Join Origin Rewards to earn",
+  "2UiHlq": "Your friend {name} has invited you to earn",
+  "3DGyPu": "Origin Tokens",
+  "45NvfT": "Sign Up Now",
+  "4ox9Sb": "Get started by downloading Origin Marketplace - the app that allows you to buy and sell anything using crypto right from your phone.",
+  "1EEJqF": "Scan to install our app",
+  "VIbSQ": "or",
+  "3LJKn0": "Earn From Desktop",
+  "q02iR": "What are Origin Rewards?",
+  "EGUu4": "OGN is a rewards cryptocurrency earned by Origin users. Earn rewards when you verify your account or invite your friends to join Origin. Even get OGN as cash back when you buy and sell.",
   "4jRz2r": "Oorsprong Beloningen",
   "3gLqI4": "Neem deel aan de campagne",
   "PhK4s": "Origin Rewards-voorwaarden",
@@ -783,7 +769,7 @@
   "1R5Tqk": "Voorwaarden accepteren",
   "4DsgoB": "Meld je aan voor Origin Rewards",
   "1oOkt7": "Doe mee met het beloningsprogramma van Origin om Origin-tokens (OGN) te verdienen. Voorwaarden zijn van toepassing.",
-  "157nkC": "Earned OGN wordt aan het einde van elke campagne verspreid. OGN is momenteel vergrendeld voor gebruik op het Origin-platform en kan niet worden overgedragen. Naar verwachting zal OGN in de toekomst worden ontgrendeld en overdraagbaar zijn.",
+  "VWMI": "Earned OGN will be distributed at the end of each campaign at the sole discretion of Origin.",
   "4weJUD": "Door deel te nemen aan het Origin-beloningsprogramma, stemt u ermee in dat u toekomstige verdiende Origin-tokens niet zult overdragen of verkopen aan anderen gedurende ten minste 1 jaar vanaf de datum van het verdienen van uw tokens.",
   "4vRJSg": "OGN worden uitgegeven in een transactie die oorspronkelijk is vrijgesteld van registratie onder de US Securities Act van 1933, zoals gewijzigd (de 'Securities Act'), en mag niet worden overgedragen in de Verenigde Staten naar, of voor rekening of voordeel van, enige VS persoon behalve op basis van een beschikbare vrijstelling van de registratievereisten van de Securities Act en alle toepasselijke staatswetgeving inzake effecten. De hierboven gebruikte termen hebben de betekenis die eraan wordt gegeven in Regulation S onder de Securities Act en alle toepasselijke wet- en regelgeving.",
   "1oPDxX": "I am not a citizen or resident of the United States of America",
@@ -1041,7 +1027,7 @@
   "qUaej": "berichten",
   "3e7Twf": "meldingen",
   "4yVyLH": "instellingen",
-  "2sNgod": "terugkoppeling",
+  "2wfvdg": "Help",
   "3vGT5M": "Troosten",
   "1k58ts": "Meer",
   "40SIOC": "Vermeldingen",
