--- a/shah/translations/pt_PT.json
+++ b/shah/translations/pt_PT.json
@@ -454,8 +454,7 @@
   "3RWPjE": "Se você tiver alguma dúvida ou precisar contestar uma transação, {=let us know}.",
   "1cDNp2": "nos informe",
   "2aLpDM": "Deixa comigo.",
-  "23c0Qy": "Socorro",
-  "1nLPNA": "Suporte, configurações e muito mais",
+  "27amK4": "Help, settings, & more",
   "37CWGX": "Fechar",
   "24XkI": "O Origin permite o verdadeiro comércio ponto a ponto.",
   "1jPEbl": "© 2019 Origin Protocol, Inc.",
@@ -465,7 +464,7 @@
   "3rymEt": "Sobre a Origem",
   "4hHFe9": "Criar um mercado",
   "b9M5L": "Configurações",
-  "2aAs7W": "Dê retorno",
+  "3bazax": "Help",
   "dYIUq": "Ganhe tokens de origem hoje",
   "2cup7z": "Participe em nossas campanhas e complete as tarefas em nosso DApp para ganhar Tokens de Origem.",
   "3PLxx0": "Vai",
@@ -681,6 +680,10 @@
   "4FezaJ": "Tokens ganhos",
   "2haWvO": "Ganhos totais",
   "1YUe0g": "Total ganho",
+  "uKsWN": "Campaign Ended",
+  "4fO8ds": "The budget allocated for this campaign has been reached. No more tokens are available to earn for this campaign.",
+  "1CZFEM": "Read our {blog post}.",
+  "3xu4iO": "To get the latest updates about Origin Rewards, {joinTelegram}.",
   "2tRIOg": "Nenhuma campanha detectada",
   "3Dcwum": "Origin Marketplace installed",
   "Nuz99": "Partner Referral",
@@ -745,33 +748,16 @@
   "18RyVa": "Fortaleça seu perfil e ganhe Tokens de Origem concluindo as verificações.",
   "wp2vP": "Concluído",
   "vVUtP": "Bem vindo ao Protocolo de Origem",
-  "jb3yU": "Convidado por",
-  "20DEff": "Seu amigo {name} convidou você para participar do Origin",
-  "hYOWA": "Inscreva-se e ganhe fichas de origem GRÁTIS",
-  "1ABObQ": "Inscreva-se hoje para a Origin.",
-  "1d6tmM": "{firstName} e você ganhará ambos tokens cryptocurrency de origem (OGN).",
-  "swYXX": "Ganhe tokens adicionais quando você verificar seu perfil, convidar seus amigos e comprar e vender no Origin.",
-  "1Nhta": "Inscreva-se agora",
-  "3ZC0FJ": "O que é a origem?",
-  "35LWwH": "Origin é o primeiro mercado peer-to-peer construído inteiramente no blockchain",
-  "2B59Tc": "Livre para usar com taxas de transação de 0%",
-  "3LGZ6f": "Navegação e pesquisa resistentes à censura",
-  "1w6gy4": "Dezenas de categorias como cartões-presente, compartilhamento de casa, comércio eletrônico e serviços",
-  "3RgYtu": "O que são tokens de origem?",
-  "2klVRF": "Os tokens de criptomoeda de origem (OGN) são tokens ERC-20 que podem ser usados na plataforma de várias maneiras.",
-  "3FISrv": "Os tokens de origem ganhos (OGN) estão atualmente bloqueados para uso no aplicativo e na plataforma Origin. Eles não podem ser transferidos para outros usuários no momento. No futuro, espera-se que a OGN seja desbloqueada e transferível.",
-  "3cl6l0": "Saber mais",
-  "2CCXRK": "Recompensas",
-  "3yDMxS": "OGN é uma recompensa cryptocurrency ganhos por usuários de origem. Ganhe recompensas quando você verificar sua conta ou convidar seus amigos para participar do Origin. Até mesmo obter OGN como dinheiro de volta quando você compra e vende.",
-  "3x8LcU": "Promovendo",
-  "nQxkV": "Os vendedores usam o OGN para promover suas listagens no mercado. Isso confere às listagens maior visibilidade e posicionamento. Listagens com OGN têm uma chance maior de serem vendidas rapidamente.",
-  "3IdS1u": "Comece a ganhar tokens de origem em minutos",
-  "3x5LAR": "Conecte sua carteira de criptografia ao Origin",
-  "1rYphf": "Inscreva-se e verifique sua conta e elegibilidade",
-  "xy6Hw": "Comece a ganhar hoje",
-  "1A0dWH": "Iniciar",
-  "2pjq9v": "Tem perguntas?",
-  "4BVEan": "Entrar em contato",
+  "2rolpt": "Join Origin Rewards to earn",
+  "2UiHlq": "Your friend {name} has invited you to earn",
+  "3DGyPu": "Origin Tokens",
+  "45NvfT": "Sign Up Now",
+  "4ox9Sb": "Get started by downloading Origin Marketplace - the app that allows you to buy and sell anything using crypto right from your phone.",
+  "1EEJqF": "Scan to install our app",
+  "VIbSQ": "or",
+  "3LJKn0": "Earn From Desktop",
+  "q02iR": "What are Origin Rewards?",
+  "EGUu4": "OGN is a rewards cryptocurrency earned by Origin users. Earn rewards when you verify your account or invite your friends to join Origin. Even get OGN as cash back when you buy and sell.",
   "4jRz2r": "Recompensas de origem",
   "3gLqI4": "Participar da campanha",
   "PhK4s": "Termos do Origin Rewards",
@@ -783,7 +769,7 @@
   "1R5Tqk": "Aceitar os termos",
   "4DsgoB": "Inscreva-se no Origin Rewards",
   "1oOkt7": "Participe do programa de recompensas do Origin para ganhar tokens de Origin (OGN). Aplicam-se termos e condições.",
-  "157nkC": "OGN ganho será distribuído no final de cada campanha. Atualmente, o OGN está bloqueado para uso na plataforma Origin e não pode ser transferido. Espera-se que o OGN seja desbloqueado e transferível no futuro.",
+  "VWMI": "Earned OGN will be distributed at the end of each campaign at the sole discretion of Origin.",
   "4weJUD": "Ao ingressar no programa de recompensas Origin, você concorda em não transferir ou vender tokens Origin ganhos para outros por pelo menos 1 ano a partir da data de obtenção dos tokens.",
   "4vRJSg": "OGN está sendo emitido em uma transação originalmente isenta de registro nos termos da US Securities Act de 1933, conforme alterada (a \"Securities Act\"), e não pode ser transferida nos Estados Unidos para, ou por conta ou benefício de qualquer US pessoa, exceto de acordo com uma isenção disponível dos requisitos de registro da Lei de Valores Mobiliários e de todas as leis estaduais aplicáveis. Os termos usados acima têm o significado que lhes é atribuído no Regulamento S, de acordo com a Lei de Valores Mobiliários e todas as leis e regulamentos aplicáveis.",
   "1oPDxX": "I am not a citizen or resident of the United States of America",
@@ -1041,7 +1027,7 @@
   "qUaej": "Mensagens",
   "3e7Twf": "Notificações",
   "4yVyLH": "Configurações",
-  "2sNgod": "Comentários",
+  "2wfvdg": "Help",
   "3vGT5M": "Console",
   "1k58ts": "Mais",
   "40SIOC": "Listagens",
