--- a/shah/translations/ro_RO.json
+++ b/shah/translations/ro_RO.json
@@ -454,8 +454,7 @@
   "3RWPjE": "Dacă aveți întrebări sau aveți nevoie să contestați o tranzacție, {=let us know}.",
   "1cDNp2": "anunță-ne",
   "2aLpDM": "Am înțeles.",
-  "23c0Qy": "Ajutor",
-  "1nLPNA": "Asistență, setări și multe altele",
+  "27amK4": "Help, settings, & more",
   "37CWGX": "Închide",
   "24XkI": "Originea permite comerțul adevărat de la egal la egal.",
   "1jPEbl": "© Protocolul de origine 2019, Inc.",
@@ -465,7 +464,7 @@
   "3rymEt": "Despre origine",
   "4hHFe9": "Creați o piață",
   "b9M5L": "Setări",
-  "2aAs7W": "Dați feedback",
+  "3bazax": "Help",
   "dYIUq": "Câștigă jetoane de origine astăzi",
   "2cup7z": "Participați la campaniile și sarcinile complete ale DApp pentru a câștiga Tokens de origine.",
   "3PLxx0": "Merge",
@@ -681,6 +680,10 @@
   "4FezaJ": "Tokenul câștigat",
   "2haWvO": "Câștiguri totale",
   "1YUe0g": "Total câștigat",
+  "uKsWN": "Campaign Ended",
+  "4fO8ds": "The budget allocated for this campaign has been reached. No more tokens are available to earn for this campaign.",
+  "1CZFEM": "Read our {blog post}.",
+  "3xu4iO": "To get the latest updates about Origin Rewards, {joinTelegram}.",
   "2tRIOg": "Nu au fost detectate campanii",
   "3Dcwum": "Origin Marketplace installed",
   "Nuz99": "Partner Referral",
@@ -745,33 +748,16 @@
   "18RyVa": "Consolidă-ți profilul și câștigă jetoane de origine prin completarea verificărilor.",
   "wp2vP": "terminat",
   "vVUtP": "Bun venit la Protocolul de origine",
-  "jb3yU": "Invitat de",
-  "20DEff": "Prietenul tău {name} a invitat să te înscrii în Origine",
-  "hYOWA": "Înscrieți-vă și câștigați TOATE originile originale",
-  "1ABObQ": "Înscrieți-vă la origine astăzi.",
-  "1d6tmM": "{firstName} și veți câștiga ambele mărci de origine criptocurrency (OGN).",
-  "swYXX": "Obțineți jetoane suplimentare când vă confirmați profilul, invitați prietenii și cumpărați și vindeți pe Origine.",
-  "1Nhta": "Inscrie-te acum",
-  "3ZC0FJ": "Ce este originea?",
-  "35LWwH": "Originea este prima piață peer-to-peer construită în întregime pe blocul de blocuri",
-  "2B59Tc": "Gratuit pentru utilizare cu taxe de tranzacție 0%",
-  "3LGZ6f": "Navigarea și căutarea rezistente la cenzură",
-  "1w6gy4": "Zeci de categorii cum ar fi cardurile cadou, sharing-ul în casele de locuit, comerțul electronic și serviciile",
-  "3RgYtu": "Ce sunt tokenurile de origine?",
-  "2klVRF": "Originile de codificare a denumirii de tip cryptocurrency (OGN) sunt tokenuri ERC-20 care pot fi folosite pe platformă în mai multe moduri.",
-  "3FISrv": "Semnele de origine câștigate (OGN) sunt în prezent blocate pentru a fi utilizate în aplicația Origine și platformă. Ele nu pot fi transferate altor utilizatori în acest moment. În viitor, este de așteptat ca OGN să fie deblocat și transferabil.",
-  "3cl6l0": "Află mai mult",
-  "2CCXRK": "recompense",
-  "3yDMxS": "OGN este o criptocurrency recompensă câștigată de utilizatorii de origine. Câștigați recompense atunci când vă verificați contul sau invitați prietenii să se alăture Origine. Chiar și OGN ca cash înapoi atunci când cumperi și vinde.",
-  "3x8LcU": "promovarea",
-  "nQxkV": "Vânzătorii folosesc OGN pentru a-și promova listările pe piață. Acest lucru oferă listărilor vizibilitate și plasare mai ridicate. Listările cu OGN au șanse mai mari de a fi vândute rapid.",
-  "3IdS1u": "Începeți să câștigați jetoanele de origine în câteva minute",
-  "3x5LAR": "Conectați portofelul dvs. de criptocurrency la Origine",
-  "1rYphf": "Înscrieți-vă și verificați-vă contul și eligibilitatea",
-  "xy6Hw": "Începeți să câștigați azi",
-  "1A0dWH": "Incepe",
-  "2pjq9v": "Aveți întrebări?",
-  "4BVEan": "Intrați în legătură",
+  "2rolpt": "Join Origin Rewards to earn",
+  "2UiHlq": "Your friend {name} has invited you to earn",
+  "3DGyPu": "Origin Tokens",
+  "45NvfT": "Sign Up Now",
+  "4ox9Sb": "Get started by downloading Origin Marketplace - the app that allows you to buy and sell anything using crypto right from your phone.",
+  "1EEJqF": "Scan to install our app",
+  "VIbSQ": "or",
+  "3LJKn0": "Earn From Desktop",
+  "q02iR": "What are Origin Rewards?",
+  "EGUu4": "OGN is a rewards cryptocurrency earned by Origin users. Earn rewards when you verify your account or invite your friends to join Origin. Even get OGN as cash back when you buy and sell.",
   "4jRz2r": "Recompense de origine",
   "3gLqI4": "Alăturați-vă campaniei",
   "PhK4s": "Termeni de recompense de origine",
@@ -783,7 +769,7 @@
   "1R5Tqk": "Acceptați termenii",
   "4DsgoB": "Înscrieți-vă la recompense de origine",
   "1oOkt7": "Alăturați-vă programului de recompensă Origin pentru a câștiga jetoane Origin (OGN). Se aplică termenii și condițiile.",
-  "157nkC": "OGN câștigate va fi distribuit la sfârșitul fiecărei campanii. OGN este în prezent blocat pentru utilizare pe platforma Origin și nu poate fi transferat. Se așteaptă ca OGN să fie deblocat și transferabil în viitor.",
+  "VWMI": "Earned OGN will be distributed at the end of each campaign at the sole discretion of Origin.",
   "4weJUD": "Prin alăturarea programului de recompense Origin, sunteți de acord că nu veți transfera sau vinde viitoarele jetoane Origin câștigate altui timp de cel puțin 1 an de la data câștigării jetoanelor dvs.",
   "4vRJSg": "OGN sunt emise într-o tranzacție scutită inițial de înregistrare în conformitate cu US Securities Act din 1933, astfel cum a fost modificată („Securities Act”) și nu poate fi transferată în Statele Unite către sau în contul sau beneficiul oricărui SUA persoană, cu excepția unei derogări disponibile de la cerințele de înregistrare din Legea privind valorile mobiliare și toate legile privind valorile mobiliare de stat. Termenii folosiți mai sus au semnificațiile care le sunt date în Regulamentul S în baza Legii valorilor mobiliare și în toate legile și reglementările aplicabile.",
   "1oPDxX": "I am not a citizen or resident of the United States of America",
@@ -1041,7 +1027,7 @@
   "qUaej": "Mesaje",
   "3e7Twf": "notificări",
   "4yVyLH": "Setări",
-  "2sNgod": "Părere",
+  "2wfvdg": "Help",
   "3vGT5M": "Consolă",
   "1k58ts": "Mai Mult",
   "40SIOC": "Anunțurile",
