--- a/shah/translations/ru_RU.json
+++ b/shah/translations/ru_RU.json
@@ -1,10 +1,10 @@
 {
   "4yVU8h": "Поздравляем!",
-  "1ZxYLz": "You've successfully created your profile. You're now ready to collect your Origin Tokens.",
-  "3EmcrW": "You've successfully created your profile. You're now ready to start earning Origin Rewards.",
-  "3F5LRH": "You've successfully created your profile. You're now ready to continue your journey in the Origin Marketplace.",
-  "3Hxe9H": "Collect OGN",
-  "iQsez": "Earn OGN",
+  "1ZxYLz": "Вы успешно создали свой профиль. Теперь вы готовы начать собирать токены Origin.",
+  "3EmcrW": "Вы успешно создали свой профиль. Теперь вы готовы начать зарабатывать в программе Origin Rewards.",
+  "3F5LRH": "Вы успешно создали свой профиль. Теперь вы готовы продолжить свое путешествие на Origin Marketplace.",
+  "3Hxe9H": "Собирайте OGN",
+  "iQsez": "Зарабатывайте OGN",
   "1IZ5ov": "Хорошо",
   "yzJlS": "ETH Адрес",
   "1SGynn": "Контакт {role}",
@@ -454,8 +454,7 @@
   "3RWPjE": "Если у вас есть какие-либо вопросы или вам необходимо оспорить сделку, {=let us know}.",
   "1cDNp2": "дайте нам знать",
   "2aLpDM": "Я понял.",
-  "23c0Qy": "Помощь",
-  "1nLPNA": "Поддержка, настройки и другое",
+  "27amK4": "Поддержка, настройки и многое другое",
   "37CWGX": "Закрыть",
   "24XkI": "Origin обеспечивает настоящую одноранговую коммерцию.",
   "1jPEbl": "© 2019 Origin Protocol, Inc.",
@@ -465,7 +464,7 @@
   "3rymEt": "Об Origin",
   "4hHFe9": "Создайте Свой Маркетплейс",
   "b9M5L": "Настройки",
-  "2aAs7W": "Дать обратную связь",
+  "3bazax": "Помощь",
   "dYIUq": "Заработайте токены Origin сегодня",
   "2cup7z": "Участвуйте в наших кампаниях и выполняйте задания на нашем DApp, чтобы заработать Origin Tokens.",
   "3PLxx0": "Идти",
@@ -681,6 +680,10 @@
   "4FezaJ": "Жетоны заработаны",
   "2haWvO": "Общий заработок",
   "1YUe0g": "Всего заработано",
+  "uKsWN": "Кампания завершена",
+  "4fO8ds": "Бюджет, выделенный на данную кампанию, закончился. Для этой кампании больше нет токенов для заработка.",
+  "1CZFEM": "Читайте наш {blog post}.",
+  "3xu4iO": "Чтобы следить за последними обновлениями о программе Origin Rewards, {joinTelegram}.",
   "2tRIOg": "Кампании не найдены",
   "3Dcwum": "Origin Marketplace установлено",
   "Nuz99": "Партнерский реферал",
@@ -692,9 +695,9 @@
   "2LLInS": "Завершено",
   "2iDrtJ": "Присоединяйтесь ко мне на Origin и зарабатывайте токены криптовалюты Origin (OGN). Origin - это новая торговая площадка для покупки и продажи с другими пользователями. Зарабатывайте токены Origin при создании своего профиля, приглашении друзей, покупке и продаже на торговой площадке.",
   "1gCRzk": "Присоединяйтесь ко мне на Origin и зарабатывайте токены криптовалюты Origin (OGN). Origin - это новая торговая площадка для покупки и продажи с другими пользователями. Зарабатывайте токены Origin при создании своего профиля, приглашении друзей, покупке и продаже на торговой площадке.",
-  "1URGr": "Invite with Your Link",
-  "1JZLkm": "Send a friend your unique invitation link.",
-  "2FPhdN": "Copy Link",
+  "1URGr": "Пригласите через свою ссылку",
+  "1JZLkm": "Отправьте своему другу свою уникальную пригласительную ссылку.",
+  "2FPhdN": "Скопировать ссылку",
   "1IIvYE": "скопированный",
   "20US5L": "копия",
   "3yCrcG": "Поделиться или чирикать",
@@ -745,33 +748,16 @@
   "18RyVa": "Защитите свой профиль и заработайте токены Origin, пройдя верификации.",
   "wp2vP": "Завершено",
   "vVUtP": "Добро пожаловать в протокол происхождения",
-  "jb3yU": "Приглашен",
-  "20DEff": "Ваш друг {name} пригласил вас присоединиться к Origin",
-  "hYOWA": "Зарегистрируйтесь и заработайте БЕСПЛАТНЫЕ жетоны происхождения",
-  "1ABObQ": "Подпишитесь на Origin сегодня.",
-  "1d6tmM": "{firstName} и вы оба заработаете токены криптовалюты Origin (OGN).",
-  "swYXX": "Зарабатывайте дополнительные токены, когда вы проверяете свой профиль, приглашаете друзей, а также покупаете и продаете на Origin.",
-  "1Nhta": "Зарегистрироваться сейчас",
-  "3ZC0FJ": "Что такое Происхождение?",
-  "35LWwH": "Origin - это первый одноранговый рынок, полностью построенный на блокчейне.",
-  "2B59Tc": "Бесплатное использование с комиссией за транзакцию 0%",
-  "3LGZ6f": "Цензуростойкий просмотр и поиск",
-  "1w6gy4": "Десятки категорий, таких как подарочные карты, обмен домами, электронная торговля и услуги",
-  "3RgYtu": "Что такое жетоны происхождения?",
-  "2klVRF": "Токены криптовалюты происхождения (OGN) - это токены ERC-20, которые можно использовать на платформе разными способами.",
-  "3FISrv": "Заработанные токены Origin (OGN) в настоящее время заблокированы для использования в приложении и платформе Origin. Они не могут быть переданы другим пользователям в данный момент. В будущем ожидается, что OGN будет разблокирован и переведен.",
-  "3cl6l0": "Узнать больше",
-  "2CCXRK": "Награды",
-  "3yDMxS": "OGN - это криптовалюта наград, заработанная пользователями Origin. Получайте вознаграждения, когда вы подтверждаете свою учетную запись или приглашаете друзей присоединиться к Origin. Даже получите OGN в качестве наличных денег при покупке и продаже.",
-  "3x8LcU": "Продвижение",
-  "nQxkV": "Продавцы используют OGN, чтобы повысить свои позиции на торговой площадке. Это дает их объявлениям более высокую видимость и размещение. Объявления с OGN имеют более высокую вероятность быть быстро проданными.",
-  "3IdS1u": "Начните зарабатывать жетоны происхождения в течение нескольких минут",
-  "3x5LAR": "Подключите свой криптовалютный кошелек к Origin",
-  "1rYphf": "Зарегистрируйтесь и подтвердите свою учетную запись и право",
-  "xy6Hw": "Начните зарабатывать сегодня",
-  "1A0dWH": "Начать",
-  "2pjq9v": "Есть вопросы?",
-  "4BVEan": "Связаться",
+  "2rolpt": "Присоединяйтесь к Origin Rewards, чтобы зарабатывать",
+  "2UiHlq": "Ваш друг {name} пригласил вас зарабатывать",
+  "3DGyPu": "Токены Origin",
+  "45NvfT": "Зарегистрироваться сейчас",
+  "4ox9Sb": "Начните с загрузки Origin Marketplace - приложения, которое позволяет вам покупать и продавать все, что угодно, используя криптовалюту прямо с вашего телефона.",
+  "1EEJqF": "Сканируйье, для установки нашего приложения",
+  "VIbSQ": "или",
+  "3LJKn0": "Заработай с компьютера",
+  "q02iR": "Что такое Origin Rewards?",
+  "EGUu4": "OGN-это бонусная криптовалюта, заработанная пользователями Origin. Получайте награды, когда вы подтверждаете свою учетную запись или приглашаете своих друзей присоединиться к Origin. Даже получайте OGN в качестве кэшбэка, когда вы покупаете и продаете.",
   "4jRz2r": "Origin Rewards",
   "3gLqI4": "Присоединиться к кампании",
   "PhK4s": "Условия Origin Rewards",
@@ -783,7 +769,7 @@
   "1R5Tqk": "Принять условия",
   "4DsgoB": "Зарегистрироваться в Origin Rewards",
   "1oOkt7": "Присоединяйтесь к программе вознаграждений Origin, чтобы зарабатывать токены Origin (OGN). Принять условия.",
-  "157nkC": "Заработанные токены OGN будет распределяться в конце каждой кампании. В настоящее время OGN можно использовать только платформе Origin, передача токенов недоступна. Ожидается, что в будущем токены OGN будут разблокированы.",
+  "VWMI": "Earned OGN will be distributed at the end of each campaign at the sole discretion of Origin.",
   "4weJUD": "Присоединяясь к программе Origin Reward, вы соглашаетесь с тем, что не будете передавать или продавать будущие заработанные токены Origin третьим лицам в течение как минимум 1 года с даты их получения.",
   "4vRJSg": "OGN выдаются в транзакции, первоначально освобожденной от регистрации в соответствии с Законом США о ценных бумагах 1933 года с внесенными в него поправками («Закон о ценных бумагах»), и не могут быть переведены в Соединенных Штатах или за счет или в пользу любого гражданина США, за исключением случаев возможного освобождения от регистрации требований Закона о ценных бумагах и всех применимых государственных законов о ценных бумагах. Термины, использованные выше, имеют значения, данные им в Положении S Закона о ценных бумагах и всех применимых законов и нормативных актов.",
   "1oPDxX": "Я не являюсь гражданином или резидентом Соединенных Штатов Америки",
@@ -1041,7 +1027,7 @@
   "qUaej": "Сообщения",
   "3e7Twf": "Уведомления",
   "4yVyLH": "Настройки",
-  "2sNgod": "Обратная связь",
+  "2wfvdg": "Помощь",
   "3vGT5M": "Консоль",
   "1k58ts": "Больше",
   "40SIOC": "Объявления",
@@ -1142,7 +1128,7 @@
   "2dbJQ2": "Вы не сможете зарабатывать OGN на Origin, но вы все равно сможете подтвердить свой профиль.",
   "BfHYB": "Я уверен",
   "eXPPI": "Нет, подождите",
-  "2sDCiE": "You're almost there! Sign up to start earning your tokens.",
+  "2sDCiE": "Вы почти у цели! Зарегистрируйтесь, чтобы начать зарабатывать токены.",
   "2vReMp": "Зарабатывайте токены Origin (OGN), укрепляя свой профиль и выполняя задания на Origin Marketplace.",
   "3JfvSq": "Да! Запишите меня",
   "wcJnW": "Нет, спасибо",
