--- a/shah/translations/th_TH.json
+++ b/shah/translations/th_TH.json
@@ -454,8 +454,7 @@
   "3RWPjE": "หากคุณมีคำถามหรือต้องการโต้แย้งการทำธุรกรรม {=let us know}",
   "1cDNp2": "แจ้งให้เราทราบ",
   "2aLpDM": "ฉันเข้าใจแล้ว.",
-  "23c0Qy": "ช่วยด้วย",
-  "1nLPNA": "สนับสนุนการตั้งค่าและอื่น ๆ",
+  "27amK4": "Help, settings, & more",
   "37CWGX": "ปิด",
   "24XkI": "Origin เปิดใช้งานการค้าเพียร์ทูเพียร์ที่แท้จริง",
   "1jPEbl": "© 2019 Origin Protocol, Inc.",
@@ -465,7 +464,7 @@
   "3rymEt": "เกี่ยวกับ Origin",
   "4hHFe9": "สร้างตลาด",
   "b9M5L": "การตั้งค่า",
-  "2aAs7W": "ให้ข้อเสนอแนะ",
+  "3bazax": "Help",
   "dYIUq": "รับโทเค็นต้นทางวันนี้",
   "2cup7z": "เข้าร่วมในแคมเปญของเราและทำงานให้เสร็จสมบูรณ์ใน DApp ของเราเพื่อรับ Origin Tokens",
   "3PLxx0": "ไป",
@@ -681,6 +680,10 @@
   "4FezaJ": "รับโทเค็นแล้ว",
   "2haWvO": "รายได้รวม",
   "1YUe0g": "รวมรายได้",
+  "uKsWN": "Campaign Ended",
+  "4fO8ds": "The budget allocated for this campaign has been reached. No more tokens are available to earn for this campaign.",
+  "1CZFEM": "Read our {blog post}.",
+  "3xu4iO": "To get the latest updates about Origin Rewards, {joinTelegram}.",
   "2tRIOg": "ไม่พบแคมเปญ",
   "3Dcwum": "Origin Marketplace installed",
   "Nuz99": "Partner Referral",
@@ -745,33 +748,16 @@
   "18RyVa": "เสริมสร้างโปรไฟล์ของคุณและรับ Origin Tokens โดยดำเนินการยืนยันให้เสร็จ",
   "wp2vP": "เสร็จ",
   "vVUtP": "ยินดีต้อนรับสู่ Origin Protocol",
-  "jb3yU": "เชิญโดย",
-  "20DEff": "เพื่อนของคุณ {name} เชิญคุณให้เข้าร่วม Origin",
-  "hYOWA": "ลงทะเบียนและรับโทเค็นต้นทางฟรี",
-  "1ABObQ": "สมัครสมาชิก Origin วันนี้",
-  "1d6tmM": "{firstName} และคุณทั้งคู่จะได้รับโทเค็นสกุลเงินดิจิตอลเข้ารหัส (OGN)",
-  "swYXX": "รับโทเค็นเพิ่มเติมเมื่อคุณยืนยันโปรไฟล์เชิญเพื่อนและซื้อและขายใน Origin",
-  "1Nhta": "สมัครเลย",
-  "3ZC0FJ": "แหล่งกำเนิดคืออะไร?",
-  "35LWwH": "Origin เป็นตลาดแห่งแรกในโลกที่ถูกสร้างขึ้นบน blockchain",
-  "2B59Tc": "ใช้งานฟรีพร้อมค่าธรรมเนียมการทำธุรกรรม 0%",
-  "3LGZ6f": "การเรียกดูและการค้นหาที่ต่อต้านการเซ็นเซอร์",
-  "1w6gy4": "หลายประเภทเช่นบัตรของขวัญการซื้อกลับบ้านอีคอมเมิร์ซและบริการ",
-  "3RgYtu": "โทเค็นต้นทางคืออะไร",
-  "2klVRF": "โทเค็น cryptocurrency Origin (OGN) เป็นโทเค็น ERC-20 ที่สามารถใช้บนแพลตฟอร์มได้หลายวิธี",
-  "3FISrv": "โทเค็น Origin ที่ได้รับ (OGN) ได้รับการล็อคเพื่อใช้ในแอพ Origin และแพลตฟอร์ม พวกเขาไม่สามารถถ่ายโอนไปยังผู้ใช้รายอื่นได้ในเวลานี้ ในอนาคตคาดว่า OGN จะปลดล็อคและโอนย้ายได้",
-  "3cl6l0": "เรียนรู้เพิ่มเติม",
-  "2CCXRK": "รางวัล",
-  "3yDMxS": "OGN เป็นรางวัล cryptocurrency ที่ผู้ใช้ Origin ได้รับ รับรางวัลเมื่อคุณยืนยันบัญชีของคุณหรือเชิญเพื่อนเข้าร่วม Origin แม้แต่รับ OGN เป็นเงินสดคืนเมื่อคุณซื้อและขาย",
-  "3x8LcU": "ส่งเสริม",
-  "nQxkV": "ผู้ขายใช้ OGN เพื่อโปรโมตรายชื่อของพวกเขาในตลาด สิ่งนี้ทำให้รายชื่อของพวกเขามองเห็นและจัดวางได้ดีขึ้น รายชื่อที่มี OGN จะมีโอกาสขายได้เร็วขึ้น",
-  "3IdS1u": "เริ่มรับโทเค็น Origin ภายในไม่กี่นาที",
-  "3x5LAR": "เชื่อมต่อกระเป๋าเงินดิจิตอลของคุณไปยัง Origin",
-  "1rYphf": "ลงทะเบียนและยืนยันบัญชีและสิทธิ์ของคุณ",
-  "xy6Hw": "เริ่มรับรายได้วันนี้",
-  "1A0dWH": "เริ่ม",
-  "2pjq9v": "มีคำถาม?",
-  "4BVEan": "ได้รับการติดต่อ",
+  "2rolpt": "Join Origin Rewards to earn",
+  "2UiHlq": "Your friend {name} has invited you to earn",
+  "3DGyPu": "Origin Tokens",
+  "45NvfT": "Sign Up Now",
+  "4ox9Sb": "Get started by downloading Origin Marketplace - the app that allows you to buy and sell anything using crypto right from your phone.",
+  "1EEJqF": "Scan to install our app",
+  "VIbSQ": "or",
+  "3LJKn0": "Earn From Desktop",
+  "q02iR": "What are Origin Rewards?",
+  "EGUu4": "OGN is a rewards cryptocurrency earned by Origin users. Earn rewards when you verify your account or invite your friends to join Origin. Even get OGN as cash back when you buy and sell.",
   "4jRz2r": "แหล่งกำเนิดรางวัล",
   "3gLqI4": "เข้าร่วมแคมเปญ",
   "PhK4s": "เงื่อนไขการให้รางวัลแหล่งกำเนิด",
@@ -783,7 +769,7 @@
   "1R5Tqk": "ยอมรับข้อกำหนด",
   "4DsgoB": "ลงทะเบียนเพื่อรับรางวัล Origin",
   "1oOkt7": "เข้าร่วมโปรแกรมรางวัลของ Origin เพื่อรับ Origin tokens (OGN) เป็นไปตามข้อกำหนดและเงื่อนไข",
-  "157nkC": "OGN ที่ได้รับจะถูกแจกจ่ายเมื่อสิ้นสุดแต่ละแคมเปญ ปัจจุบัน OGN ถูกล็อคสำหรับการใช้งานบนแพลตฟอร์ม Origin และไม่สามารถถ่ายโอนได้ คาดว่า OGN จะปลดล็อคและถ่ายโอนได้ในอนาคต",
+  "VWMI": "Earned OGN will be distributed at the end of each campaign at the sole discretion of Origin.",
   "4weJUD": "ในการเข้าร่วมโปรแกรมผลตอบแทน Origin คุณยอมรับว่าคุณจะไม่โอนหรือขายโทเค็น Origin ที่ได้รับในอนาคตให้กับผู้อื่นเป็นเวลาอย่างน้อย 1 ปีนับจากวันที่รับโทเค็นของคุณ",
   "4vRJSg": "OGN กำลังออกธุรกรรมโดยเดิมได้รับการยกเว้นจากการลงทะเบียนภายใต้พระราชบัญญัติหลักทรัพย์ของสหรัฐอเมริกาปี 1933 ซึ่งแก้ไขเพิ่มเติม (“ พระราชบัญญัติหลักทรัพย์”) และไม่สามารถโอนในประเทศสหรัฐอเมริกาไปยังหรือเพื่อบัญชีหรือผลประโยชน์ของสหรัฐฯใด ๆ บุคคลยกเว้นตามข้อยกเว้นที่มีอยู่จากข้อกำหนดการลงทะเบียนของพระราชบัญญัติหลักทรัพย์และกฎหมายหลักทรัพย์ของรัฐที่บังคับใช้ทั้งหมด ข้อกำหนดที่ใช้ข้างต้นมีความหมายที่กำหนดไว้ในข้อบังคับ S ภายใต้พระราชบัญญัติหลักทรัพย์และกฎหมายและข้อบังคับที่เกี่ยวข้องทั้งหมด",
   "1oPDxX": "I am not a citizen or resident of the United States of America",
@@ -1041,7 +1027,7 @@
   "qUaej": "ข้อความ",
   "3e7Twf": "การแจ้งเตือน",
   "4yVyLH": "การตั้งค่า",
-  "2sNgod": "ผลตอบรับ",
+  "2wfvdg": "Help",
   "3vGT5M": "ปลอบใจ",
   "1k58ts": "มากกว่า",
   "40SIOC": "รายชื่อ",
