--- a/shah/translations/tr_TR.json
+++ b/shah/translations/tr_TR.json
@@ -454,8 +454,7 @@
   "3RWPjE": "Herhangi bir sorunuz varsa veya bir anlaşmaya itiraz etmeniz gerekiyorsa, {=let us know}.",
   "1cDNp2": "bilmemize izin ver",
   "2aLpDM": "Anladım.",
-  "23c0Qy": "Yardım",
-  "1nLPNA": "Destek, ayarlar ve daha fazlası",
+  "27amK4": "Help, settings, & more",
   "37CWGX": "Kapat",
   "24XkI": "Kökeni eşler arası ticaretin gerçek olmasını sağlar.",
   "1jPEbl": "© 2019 Menşe Protokolü, Inc.",
@@ -465,7 +464,7 @@
   "3rymEt": "Menşei Hakkında",
   "4hHFe9": "Bir Pazar Yeri Yaratın",
   "b9M5L": "Ayarlar",
-  "2aAs7W": "Geri bildirim ver",
+  "3bazax": "Help",
   "dYIUq": "Köken Belirteçlerini Bugün Kazanın",
   "2cup7z": "Menşe Belirteçlerini kazanmak için kampanyalarımıza katılın ve DApp'ımızdaki görevleri tamamlayın.",
   "3PLxx0": "Gitmek",
@@ -681,6 +680,10 @@
   "4FezaJ": "Jeton kazanıldı",
   "2haWvO": "toplam kazanç",
   "1YUe0g": "Toplam Kazanç",
+  "uKsWN": "Campaign Ended",
+  "4fO8ds": "The budget allocated for this campaign has been reached. No more tokens are available to earn for this campaign.",
+  "1CZFEM": "Read our {blog post}.",
+  "3xu4iO": "To get the latest updates about Origin Rewards, {joinTelegram}.",
   "2tRIOg": "Kampanya tespit edilmedi",
   "3Dcwum": "Origin Marketplace installed",
   "Nuz99": "Partner Referral",
@@ -745,33 +748,16 @@
   "18RyVa": "Profilinizi güçlendirin ve doğrulamaları tamamlayarak Origin Tokens kazanın.",
   "wp2vP": "Tamamlandı",
   "vVUtP": "Menşe Protokolüne Hoş Geldiniz",
-  "jb3yU": "Tarafından davet edildi",
-  "20DEff": "Arkadaşınız {name} sizi Origin'a davet etti",
-  "hYOWA": "Kaydolun ve BEDAVA Origin Jetonları kazanın",
-  "1ABObQ": "Origin için bugün kaydolun.",
-  "1d6tmM": "{firstName} ve hem Origin cryptocurrency belirteçleri (OGN) kazanacaksınız.",
-  "swYXX": "Profilinizi doğruladığınızda, arkadaşlarınızı davet ettiğinizde ve Origin'de satın alıp sattığınızda ilave jeton kazanın.",
-  "1Nhta": "Şimdi kayıt ol",
-  "3ZC0FJ": "Menşei Nedir?",
-  "35LWwH": "Kökeni tamamen blok zinciri üzerine inşa edilen ilk eşler arası pazar yeri",
-  "2B59Tc": "% 0 işlem ücreti ile kullanmak ücretsiz",
-  "3LGZ6f": "Sansür dayanıklı tarama ve arama",
-  "1w6gy4": "Hediye kartları, ev paylaşımı, e-ticaret ve hizmetler gibi onlarca kategori",
-  "3RgYtu": "Menşe Belirteçleri Nedir?",
-  "2klVRF": "Kökeni şifreleme para birimi belirteçleri (OGN), platformda birçok şekilde kullanılabilen ERC-20 belirteçleridir.",
-  "3FISrv": "Kazanılan Origin belirteçleri (OGN), Origin uygulaması ve platformunda kullanım için şu anda kilitli. Şu anda diğer kullanıcılara aktarılamazlar. Gelecekte, OGN'nin kilidinin açılması ve aktarılabilir olması beklenmektedir.",
-  "3cl6l0": "Daha fazla bilgi edin",
-  "2CCXRK": "Ödüller",
-  "3yDMxS": "OGN, Origin kullanıcıları tarafından kazanılan bir cryptocurrency ödülüdür. Hesabınızı doğruladığınızda veya arkadaşlarınızı Origin'e katılmaya davet ettiğinizde ödüller kazanın. Satın alırken ve satarken OGN'yi bile geri alabilirsiniz.",
-  "3x8LcU": "teşvik",
-  "nQxkV": "Satıcılar, piyasadaki listelerini tanıtmak için OGN'yi kullanır. Bu, listelerine daha yüksek görünürlük ve yerleştirme sağlar. OGN olan ilanların hızlı bir şekilde satılma şansı daha yüksektir.",
-  "3IdS1u": "Birkaç dakika içinde Origin belirteçleri kazanmaya başlayın",
-  "3x5LAR": "Cryptocurrency cüzdanını Origin'e bağla",
-  "1rYphf": "Kaydolun ve hesabınızı ve uygunluğunuzu doğrulayın",
-  "xy6Hw": "Bugün kazanmaya başlayın",
-  "1A0dWH": "Başlamak",
-  "2pjq9v": "Sorularım var?",
-  "4BVEan": "Temasta olmak",
+  "2rolpt": "Join Origin Rewards to earn",
+  "2UiHlq": "Your friend {name} has invited you to earn",
+  "3DGyPu": "Origin Tokens",
+  "45NvfT": "Sign Up Now",
+  "4ox9Sb": "Get started by downloading Origin Marketplace - the app that allows you to buy and sell anything using crypto right from your phone.",
+  "1EEJqF": "Scan to install our app",
+  "VIbSQ": "or",
+  "3LJKn0": "Earn From Desktop",
+  "q02iR": "What are Origin Rewards?",
+  "EGUu4": "OGN is a rewards cryptocurrency earned by Origin users. Earn rewards when you verify your account or invite your friends to join Origin. Even get OGN as cash back when you buy and sell.",
   "4jRz2r": "Kökeni Ödülleri",
   "3gLqI4": "Kampanyaya Katıl",
   "PhK4s": "Menşe Ödül Koşulları",
@@ -783,7 +769,7 @@
   "1R5Tqk": "Şartları kabul et",
   "4DsgoB": "Menşe Ödüllerine Kaydolun",
   "1oOkt7": "Origin belirteçlerini (OGN) kazanmak için Origin’in ödül programına katılın. Şartlar ve koşullar geçerlidir.",
-  "157nkC": "Kazanılan OGN, her kampanyanın sonunda dağıtılacak. OGN, Origin platformunda kullanım için kilitlenmiştir ve devredilemez. Gelecekte OGN'nin kilidi açılacak ve aktarılabilir olması beklenmektedir.",
+  "VWMI": "Earned OGN will be distributed at the end of each campaign at the sole discretion of Origin.",
   "4weJUD": "Origin ödülleri programına katılarak, kazanılmış olan kazandığınız Origin Jetonlarını, jetonlarınızı kazanma tarihinden itibaren en az 1 yıl boyunca başkalarına devretmeyeceğinizi veya satmayacağınızı kabul edersiniz.",
   "4vRJSg": "OGN, asıl olarak 1933 tarihli ABD Menkul Kıymetler Yasası uyarınca (“Menkul Kıymetler Yasası”) kayıt altına alınmadan muaf olan bir işlemde yayınlanmaktadır ve ABD'de herhangi bir ABD’ye veya hesabına veya menfaatine ABD’ye devredilemez Menkul Kıymetler Yasası'nın kayıt gerekliliklerinden ve ilgili tüm devlet menkul kıymet yasalarından muaf tutulacak bir kişi hariç. Yukarıda kullanılan terimler, Menkul Kıymetler Yasası altındaki S Yönetmeliğinde ve ilgili tüm yasa ve yönetmeliklerde belirtilen anlamlara sahiptir.",
   "1oPDxX": "I am not a citizen or resident of the United States of America",
@@ -1041,7 +1027,7 @@
   "qUaej": "Mesajlar",
   "3e7Twf": "Bildirimler",
   "4yVyLH": "Ayarlar",
-  "2sNgod": "geri bildirim",
+  "2wfvdg": "Help",
   "3vGT5M": "konsol",
   "1k58ts": "Daha",
   "40SIOC": "Listeler",
