--- a/shah/translations/uk_UA.json
+++ b/shah/translations/uk_UA.json
@@ -454,8 +454,7 @@
   "3RWPjE": "Якщо у вас виникли питання або потрібно оскаржити транзакцію, {=let us know}.",
   "1cDNp2": "повідомте нам про це",
   "2aLpDM": "Зрозумів.",
-  "23c0Qy": "Довідка",
-  "1nLPNA": "Підтримка, налаштування тощо",
+  "27amK4": "Help, settings, & more",
   "37CWGX": "Закрити",
   "24XkI": "Походження дозволяє справжню комерційну комерцію.",
   "1jPEbl": "© Протокол походження продукту 2019, Inc.",
@@ -465,7 +464,7 @@
   "3rymEt": "Про походження",
   "4hHFe9": "Створіть Marketplace",
   "b9M5L": "Налаштування",
-  "2aAs7W": "Відгуки",
+  "3bazax": "Help",
   "dYIUq": "Заробіть маркери походження сьогодні",
   "2cup7z": "Беріть участь в наших кампаніях і виконуйте завдання на нашому DApp, щоб заробити токени Origin.",
   "3PLxx0": "Ідіть",
@@ -681,6 +680,10 @@
   "4FezaJ": "Токени зароблені",
   "2haWvO": "Загальний прибуток",
   "1YUe0g": "Усього заробленого",
+  "uKsWN": "Campaign Ended",
+  "4fO8ds": "The budget allocated for this campaign has been reached. No more tokens are available to earn for this campaign.",
+  "1CZFEM": "Read our {blog post}.",
+  "3xu4iO": "To get the latest updates about Origin Rewards, {joinTelegram}.",
   "2tRIOg": "Не виявлено жодної кампанії",
   "3Dcwum": "Origin Marketplace installed",
   "Nuz99": "Partner Referral",
@@ -745,33 +748,16 @@
   "18RyVa": "Зміцнюйте свій профіль і заробляйте початкові маркери, виконавши перевірки.",
   "wp2vP": "Завершено",
   "vVUtP": "Ласкаво просимо до протоколу походження",
-  "jb3yU": "Запрошений користувачем",
-  "20DEff": "Ваш друг {name} запросив вас приєднатися до Origin",
-  "hYOWA": "Зареєструйтеся та отримайте БЕЗКОШТОВНІ походження маркерів",
-  "1ABObQ": "Зареєструйтеся для Походження сьогодні.",
-  "1d6tmM": "{firstName} і ви обидва отримаєте маркери криптовалюти Origin (OGN).",
-  "swYXX": "Заробляйте додаткові маркери, коли підтверджуєте свій профіль, запрошуєте друзів і купуєте і продаєте за оригіналом.",
-  "1Nhta": "Зареєструватися зараз",
-  "3ZC0FJ": "Що таке Походження?",
-  "35LWwH": "Походження - це перший ринковий ринок, побудований виключно на блокчейн",
-  "2B59Tc": "Безкоштовно використовувати з 0% комісії за транзакцію",
-  "3LGZ6f": "Цензура стійкий перегляд і пошук",
-  "1w6gy4": "Десятки категорій, таких як подарункові карти, homesharing, електронна комерція та послуги",
-  "3RgYtu": "Що таке маркери походження?",
-  "2klVRF": "Походження криптовалютних токенів (OGN) є маркерами ERC-20, які можуть використовуватися на платформі багатьма способами.",
-  "3FISrv": "Токени заробленого походження (OGN) наразі заблоковані для використання на програмі та платформі Origin. Наразі вони не можуть бути передані іншим користувачам. У майбутньому очікується, що OGN буде розблокована і передана.",
-  "3cl6l0": "Дізнатися більше",
-  "2CCXRK": "Нагороди",
-  "3yDMxS": "OGN - це криптовалюта, винагороджена користувачами Origin. Заробляйте нагороди, коли ви підтверджуєте свій обліковий запис або запрошуєте друзів приєднатися до Origin. Навіть отримати OGN як готівку назад, коли ви купуєте і продаєте.",
-  "3x8LcU": "Просування",
-  "nQxkV": "Продавці використовують OGN для просування своїх лістингу на ринку. Це дає їхнім спискам більшу видимість та розміщення. Листи з OGN мають більший шанс швидко продатись.",
-  "3IdS1u": "Почати заробляти маркери походження протягом декількох хвилин",
-  "3x5LAR": "Підключіть свій гаманець криптовалюти до Origin",
-  "1rYphf": "Зареєструйтеся та підтвердьте свій обліковий запис і право на участь",
-  "xy6Hw": "Почніть заробляти сьогодні",
-  "1A0dWH": "Почати",
-  "2pjq9v": "Є питання?",
-  "4BVEan": "Налагодити зв'язок",
+  "2rolpt": "Join Origin Rewards to earn",
+  "2UiHlq": "Your friend {name} has invited you to earn",
+  "3DGyPu": "Origin Tokens",
+  "45NvfT": "Sign Up Now",
+  "4ox9Sb": "Get started by downloading Origin Marketplace - the app that allows you to buy and sell anything using crypto right from your phone.",
+  "1EEJqF": "Scan to install our app",
+  "VIbSQ": "or",
+  "3LJKn0": "Earn From Desktop",
+  "q02iR": "What are Origin Rewards?",
+  "EGUu4": "OGN is a rewards cryptocurrency earned by Origin users. Earn rewards when you verify your account or invite your friends to join Origin. Even get OGN as cash back when you buy and sell.",
   "4jRz2r": "Origin Rewards",
   "3gLqI4": "Приєднуйтесь до кампанії",
   "PhK4s": "Умови нагородження",
@@ -783,7 +769,7 @@
   "1R5Tqk": "Прийняти умови",
   "4DsgoB": "Підпишіться на нагороди Origin",
   "1oOkt7": "Приєднуйтесь до програми винагород Origin, щоб заробити жетони Origin (OGN). Діють умови та умови.",
-  "157nkC": "Зароблені OGN будуть розподілятися в кінці кожної кампанії. Наразі OGN заблокований для використання на платформі Origin і його неможливо перенести. Очікується, що OGN буде розблоковано та передано в майбутньому.",
+  "VWMI": "Earned OGN will be distributed at the end of each campaign at the sole discretion of Origin.",
   "4weJUD": "Приєднавшись до програми нагород Origin, ви погоджуєтесь, що не будете передавати або продавати майбутні зароблені жетони Origin іншим принаймні 1 рік з дня отримання ваших жетонів.",
   "4vRJSg": "OGN випускаються в рамках трансакції, спочатку звільненої від реєстрації згідно із Законом про цінні папери США 1933 року із змінами («Закон про цінні папери») і не можуть бути передані в Сполучених Штатах, або на рахунок або користь будь-яких США особа, за винятком наявного звільнення від вимог реєстрації Закону про цінні папери та всіх застосовних законів про державні цінні папери. Терміни, які використовуються вище, мають значення, які їм надано у Положенні S згідно із Законом про цінні папери та у всіх чинних законах та нормативних актах.",
   "1oPDxX": "I am not a citizen or resident of the United States of America",
@@ -1041,7 +1027,7 @@
   "qUaej": "Повідомлення",
   "3e7Twf": "Сповіщення",
   "4yVyLH": "Налаштування",
-  "2sNgod": "Відгуки",
+  "2wfvdg": "Help",
   "3vGT5M": "Консоль",
   "1k58ts": "Більше",
   "40SIOC": "Списки",
