--- a/shah/translations/zh_CN.json
+++ b/shah/translations/zh_CN.json
@@ -1,10 +1,10 @@
 {
-  "4yVU8h": "Congratulations!",
-  "1ZxYLz": "You've successfully created your profile. You're now ready to collect your Origin Tokens.",
-  "3EmcrW": "You've successfully created your profile. You're now ready to start earning Origin Rewards.",
-  "3F5LRH": "You've successfully created your profile. You're now ready to continue your journey in the Origin Marketplace.",
-  "3Hxe9H": "Collect OGN",
-  "iQsez": "Earn OGN",
+  "4yVU8h": "恭喜!",
+  "1ZxYLz": "您已成功创建个人档案，您现在可以领取您的Origin代币。",
+  "3EmcrW": "您已成功创建个人档案，现在可以开始赚取Origin奖励。",
+  "3F5LRH": "您已成功创建个人档案，您现在可以继续您在Origin市场中的旅程了。",
+  "3Hxe9H": "领取OGN",
+  "iQsez": "赚取OGN",
   "1IZ5ov": "好",
   "yzJlS": "以太坊地址",
   "1SGynn": "联系{role}",
@@ -129,11 +129,11 @@
     "growth.nov2019.short_name": "2019年 11月",
     "growth.dec2019.name": "2019年12月的活动",
     "growth.dec2019.short_name": "2019年12月",
-    "growth.jan2020.name": "January 2020 Campaign",
-    "growth.jan2020.short_name": "January 2020",
+    "growth.jan2020.name": "2020年1月活动",
+    "growth.jan2020.short_name": "2020年1月",
     "growth.profile.and.email.requirement": "已验证电子邮件和 Origin 个人资料",
     "growth.two.attestations.requirement": "3个个人信息验证",
-    "growth.three.attestations.requirement": "Four profile verifications",
+    "growth.three.attestations.requirement": "四项身份认证",
     "growth.profile.requirement": "照片和姓名",
     "growth.email.requirement": "电子邮件已验证",
     "growth.attestation.requirement.twitterAttestation": "推特证明",
@@ -293,22 +293,22 @@
     "growth.share.content20.title": "CoinList创始人讨论未来的去中心化市场",
     "growth.share.content20.details": "CoinList的联合创始人兼总裁Andy Bromberg讨论了他对Origin的看法以及我们的长期愿景。",
     "growth.share.content20.link": "观看视频",
-    "growth.share.content21.title": "Built on Origin: A Decentralized Shopify Alternative",
+    "growth.share.content21.title": "建立在Origin上：去中心化的的Shopify替代产品",
     "growth.share.content21.details": "We are proud to announce the Origin e-commerce store, a decentralized, open source alternative to Shopify, hosted entirely on IPFS.",
     "growth.share.content21.link": "阅读文章",
     "growth.share.content22.title": "一位YouTube早期员如何与Uber和Airbnb竞争",
     "growth.share.content22.details": "我们的联合创始人Matthew Liu与Encrypted Podcast的联合创始人Ahmed Al-Balaghi对话。",
     "growth.share.content22.link": "观看视频",
     "growth.share.content23.title": "Announcing Origin Commissions to Promote Seller Listings with OGN",
-    "growth.share.content23.details": "Origin Commissions: A new way for sellers to boost their sales & DApp developers and affiliates to earn Origin Tokens.",
+    "growth.share.content23.details": "Origin佣金计划：帮助卖家增加销售和DApp开发人员和允许联盟营销人员赚取Origin代币的新方式。",
     "growth.share.content23.link": "阅读文章",
-    "growth.share.content24.title": "Pantera Capital's Paul Veradittakit on How Origin Enables Freedom",
+    "growth.share.content24.title": "Pantera Capital的Paul Veradittakit谈论Origin如何实现自由",
     "growth.share.content24.details": "Meet Paul, Co-investment Officer at Pantera Capital.",
     "growth.share.content24.link": "观看视频",
-    "growth.share.content25.title": "Joey Krug Co-founder of Augur Explains the Value of Origin",
-    "growth.share.content25.details": "Joey Krug Co-founder of Augur & Co-investment Officer at Pantera Capital explains the value of Origin.",
+    "growth.share.content25.title": "Augur的联合创始人Joey Krug阐述Origin的价值",
+    "growth.share.content25.details": "Pantera Capital的共同投资官和Augur联合创始人Joey Krug解释Origin的价值。",
     "growth.share.content25.link": "观看视频",
-    "growth.share.content26.title": "World-class investors believe Origin will disrupt the sharing economy",
+    "growth.share.content26.title": "世界级的投资者认为Origin将为共享经济带来破坏式的创新",
     "growth.share.content26.details": "Origin目前在全世界有500多家投资方来支持实现真正的P2P商业的愿景",
     "growth.share.content26.link": "观看视频",
     "growth.share.content27.title": "Fortune Magazine's Balancing the Ledger with Origin's Founders",
@@ -317,24 +317,24 @@
     "growth.share.content28.title": "YouTube Founder and Origin Investor Discusses Strength of Origin Team",
     "growth.share.content28.details": "Youtube创始人之一的Steve Chen讨论Origin团队的强项.",
     "growth.share.content28.link": "观看视频",
-    "growth.share.content29.title": "PayPal Cofounder & First YouTube Engineer Talks About His Work at Origin",
+    "growth.share.content29.title": "Paypal创始人之一和YouTube第一位工程师谈论Origin",
     "growth.share.content29.details": "Meet Yu Pan: PayPal's Co-founder, first YouTube engineer and now lead R&D engineer at Origin.",
     "growth.share.content29.link": "观看视频",
-    "growth.share.content30.title": "Pantera Capital's Paul Veradittakit on How Origin Enables Freedom",
+    "growth.share.content30.title": "Pantera Capital的Paul Veradittakit谈论Origin如何实现自由",
     "growth.share.content30.details": "Meet Paul, Co-investment Officer at Pantera Capital.",
     "growth.share.content30.link": "观看视频",
-    "growth.share.content31.title": "The Future of the Sharing Economy",
-    "growth.share.content31.details": "Origin is building the future of the sharing economy.",
+    "growth.share.content31.title": "共享经济的未来",
+    "growth.share.content31.details": "Origin正在建立未来的共享经济。",
     "growth.share.content31.link": "观看视频",
-    "growth.share.content32.title": "Follow Origin on Blockfolio Signal!",
-    "growth.share.content32.details": "Follow Origin on Blockfolio and receive the latest news updates and OGN airdrops from Origin's core team. ",
-    "growth.share.content32.link": "Follow Origin",
+    "growth.share.content32.title": "在Blockfolio Signal上关注Origin！",
+    "growth.share.content32.details": "在Blockfolio关注Origin以收到来自Origin核心团队的最新消息。 ",
+    "growth.share.content32.link": "关注Origin",
     "growth.share.content33.title": "加入Origin电报群以赚取OGN",
-    "growth.share.content33.details": "Follow Origin on Telegram and earn Origin Tokens (OGN)!",
-    "growth.share.content33.link": "Follow Origin",
-    "growth.share.content34.title": "Creating the New Sharing Economy",
+    "growth.share.content33.details": "在电报上关注Origin以赚取Origin代币！",
+    "growth.share.content33.link": "关注Origin",
+    "growth.share.content34.title": "创造新的共享经济",
     "growth.share.content34.details": "Origin在以太坊公链上建立了一个去中心化市场协议并取代了中介人，然后使买家和卖家通过智能合约来相互链接",
-    "growth.share.content34.link": "Follow Origin"
+    "growth.share.content34.link": "关注Origin"
   },
   "3eD99i": "验证电子邮件地址",
   "1hBrwm": "将姓名和照片添加到个人资料",
@@ -371,7 +371,7 @@
   "4qOByY": "已获得",
   "3lytDE": "特点",
   "2dj9Ax": "下载 Origin Marketplace 应用 app",
-  "3mDuJu": "Install & complete 4 verifications.",
+  "3mDuJu": "安装并完成4项验证。",
   "14jidi": "分享这个",
   "1jzK6G": "未找到任何奖励活动",
   "1bzhfq": "未找到正在进行的奖励活动",
@@ -407,7 +407,7 @@
   "3tmHza": "未命名用户",
   "48NbPX": "了解更多",
   "1fBJTw": "发送",
-  "2EjJhq": "You're not signed in",
+  "2EjJhq": "您尚未登录",
   "2eOq3t": "Get secure access to your data by signing with your private key",
   "2CPasx": "加载中...",
   "136kFa": "登陆",
@@ -454,8 +454,7 @@
   "3RWPjE": "如果您有任何疑问或需要对交易提出异议， {=let us know}。",
   "1cDNp2": "请通知我们",
   "2aLpDM": "知道了。",
-  "23c0Qy": "帮助",
-  "1nLPNA": "支持，设置，&更多",
+  "27amK4": "Help, settings, & more",
   "37CWGX": "关闭",
   "24XkI": "Origin实现真正的点对点商业",
   "1jPEbl": "© Origin Protocol, Inc.",
@@ -465,7 +464,7 @@
   "3rymEt": "关于 Origin",
   "4hHFe9": "创建一个市场",
   "b9M5L": "设置",
-  "2aAs7W": "恳求反馈",
+  "3bazax": "Help",
   "dYIUq": "立即赚取 Origin 代币",
   "2cup7z": "参与我们的奖励活动并在我们的 DApp 上完成一些动作即可获得 Origin Tokens。",
   "3PLxx0": "开始",
@@ -681,6 +680,10 @@
   "4FezaJ": "代币赚了",
   "2haWvO": "总收入",
   "1YUe0g": "赚取总额",
+  "uKsWN": "Campaign Ended",
+  "4fO8ds": "The budget allocated for this campaign has been reached. No more tokens are available to earn for this campaign.",
+  "1CZFEM": "Read our {blog post}.",
+  "3xu4iO": "To get the latest updates about Origin Rewards, {joinTelegram}.",
   "2tRIOg": "目前没有奖励活动",
   "3Dcwum": "已安装Origin Marketplace",
   "Nuz99": "Partner Referral",
@@ -694,7 +697,7 @@
   "1gCRzk": "我想邀请您注册使用 Origin 并开始赚取 Origin 代币 (OGN)。Origin 是一个新的电商平台。当您创建个人资料，邀请好友或在平台上进行买卖，都可以赚取 Origin 代币。",
   "1URGr": "Invite with Your Link",
   "1JZLkm": "Send a friend your unique invitation link.",
-  "2FPhdN": "Copy Link",
+  "2FPhdN": "复制链接",
   "1IIvYE": "已复制",
   "20US5L": "复制",
   "3yCrcG": "分享",
@@ -745,33 +748,16 @@
   "18RyVa": "加强你的个人资料，并通过完成验证获取Origin代币。",
   "wp2vP": "已完成",
   "vVUtP": "欢迎使用 Origin Protocol",
-  "jb3yU": "邀请人:",
-  "20DEff": "您的朋友 {name} 邀请您加入 Origin",
-  "hYOWA": "立即注册以获得免费的 Origin 代币",
-  "1ABObQ": "立即注册 Origin。",
-  "1d6tmM": "您和 {firstName} 都会获得 Origin 代币 (OGN)。",
-  "swYXX": "创建个人资料，邀请好友或在平台上进行买卖以赚取更多 Origin 代币。",
-  "1Nhta": "立即注册",
-  "3ZC0FJ": "Origin 是什么公司？",
-  "35LWwH": "Origin 是第一个完全基于区块链构建的点对点低昂上平台",
-  "2B59Tc": "免费使用平台并享受 0％ 交易费",
-  "3LGZ6f": "抗审查的平台浏览和搜索",
-  "1w6gy4": "礼品卡，房屋共享，电子商务和服务等数十个类别",
-  "3RgYtu": "Origin 代币是什么？",
-  "2klVRF": "Origin 代币（OGN）是 ERC-20令牌，可以通过多种方式在平台上使用。",
-  "3FISrv": "通过奖励活动赚取的 OGN 目前被锁定，因此只能在 Origin 平台 上使用，无法转给其他人。以后 OGN 将会被解锁并可以被转给其他人。",
-  "3cl6l0": "了解更多",
-  "2CCXRK": "奖励",
-  "3yDMxS": "OGN 是一个用来奖励 Origin 用户的加密货币。您可以通过在平台上验证身份或将 Origin 推荐给朋友使用而获得奖励，甚至在买卖时获得现金返还。",
-  "3x8LcU": "促销",
-  "nQxkV": "卖家在市场上使用OGN来促销他们的商品并使他们的商品列表具有更高的可见性和排名。拥有OGN的商品会有更高的机会被迅速出售。",
-  "3IdS1u": "立即开始赚取 Origin 代币",
-  "3x5LAR": "将您的加密货币钱包连接到 Origin 平台",
-  "1rYphf": "注册并验证您的帐户和参与资格",
-  "xy6Hw": "今天就开始赚取",
-  "1A0dWH": "立即开始",
-  "2pjq9v": "有问题吗？",
-  "4BVEan": "联系我们",
+  "2rolpt": "Join Origin Rewards to earn",
+  "2UiHlq": "Your friend {name} has invited you to earn",
+  "3DGyPu": "Origin Tokens",
+  "45NvfT": "Sign Up Now",
+  "4ox9Sb": "Get started by downloading Origin Marketplace - the app that allows you to buy and sell anything using crypto right from your phone.",
+  "1EEJqF": "Scan to install our app",
+  "VIbSQ": "or",
+  "3LJKn0": "Earn From Desktop",
+  "q02iR": "What are Origin Rewards?",
+  "EGUu4": "OGN is a rewards cryptocurrency earned by Origin users. Earn rewards when you verify your account or invite your friends to join Origin. Even get OGN as cash back when you buy and sell.",
   "4jRz2r": "Origin 奖励计划",
   "3gLqI4": "参与活动",
   "PhK4s": "Origin 奖励计划",
@@ -783,7 +769,7 @@
   "1R5Tqk": "接受条款",
   "4DsgoB": "注册参加Origin奖励活动",
   "1oOkt7": "参与 Origin 奖励计划以获得 Origin 代币（OGN）。Origin 奖励计划将受相关条款与条件的约束。",
-  "157nkC": "已得到的OGN将会在每个活动结束时被分配。OGN目前被锁在Origin平台上使用并且无法转账。预计OGN将在未来被解锁并可以转账。",
+  "VWMI": "Earned OGN will be distributed at the end of each campaign at the sole discretion of Origin.",
   "4weJUD": "加入Origin奖励活动后，你将同意从你获得Origin代币的日期开始将不会转账或者出售已经获得的Origin代币至少一年。",
   "4vRJSg": "OGN根据遵守《美国证券法》（1933）修正后的交易（“证券法”）的情况下发行，并不得在美国转账或为任何美国人的帐户或利益转让，除非根据《证券法》和所有适用州证券法的注册要求豁免。以上术语具有《证券法》S条例和所有适用法律法规赋予它们的含义。",
   "1oPDxX": "I am not a citizen or resident of the United States of America",
@@ -1041,7 +1027,7 @@
   "qUaej": "消息",
   "3e7Twf": "通知",
   "4yVyLH": "设置",
-  "2sNgod": "反馈",
+  "2wfvdg": "Help",
   "3vGT5M": "控制台",
   "1k58ts": "更多",
   "40SIOC": "列表",
