--- a/shah/translations/zh_TW.json
+++ b/shah/translations/zh_TW.json
@@ -454,8 +454,7 @@
   "3RWPjE": "如果您有任何疑問或需要對交易提出異議， {=let us know}。",
   "1cDNp2": "讓我們知道",
   "2aLpDM": "我知道了。",
-  "23c0Qy": "救命",
-  "1nLPNA": "支持，設置等",
+  "27amK4": "Help, settings, & more",
   "37CWGX": "關",
   "24XkI": "Origin支持真正的點對點商務。",
   "1jPEbl": "©2019 Origin Protocol，Inc.",
@@ -465,7 +464,7 @@
   "3rymEt": "關於起源",
   "4hHFe9": "創建市場",
   "b9M5L": "設定值",
-  "2aAs7W": "給予反饋",
+  "3bazax": "Help",
   "dYIUq": "立即賺取起源代幣",
   "2cup7z": "參與我們的活動並完成DApp的任務以獲得Origin Tokens。",
   "3PLxx0": "走",
@@ -681,6 +680,10 @@
   "4FezaJ": "代幣賺了",
   "2haWvO": "總收入",
   "1YUe0g": "總收入",
+  "uKsWN": "Campaign Ended",
+  "4fO8ds": "The budget allocated for this campaign has been reached. No more tokens are available to earn for this campaign.",
+  "1CZFEM": "Read our {blog post}.",
+  "3xu4iO": "To get the latest updates about Origin Rewards, {joinTelegram}.",
   "2tRIOg": "未檢測到廣告活動",
   "3Dcwum": "Origin Marketplace installed",
   "Nuz99": "Partner Referral",
@@ -745,33 +748,16 @@
   "18RyVa": "通過完成驗證來增強您的個人資料並獲得Origin Token。",
   "wp2vP": "已完成",
   "vVUtP": "歡迎來到Origin Protocol",
-  "jb3yU": "受邀",
-  "20DEff": "你的朋友 {name} 邀請你加入Origin",
-  "hYOWA": "註冊並獲得免費的Origin Tokens",
-  "1ABObQ": "立即註冊Origin。",
-  "1d6tmM": "{firstName} ，你將獲得Origin加密貨幣令牌（OGN）。",
-  "swYXX": "在驗證您的個人資料，邀請您的朋友以及在Origin上買賣時，可以獲得額外的代幣。",
-  "1Nhta": "立即註冊",
-  "3ZC0FJ": "什麼是Origin？",
-  "35LWwH": "Origin是第一個完全基於區塊鏈構建的點對點市場",
-  "2B59Tc": "免費使用0％的交易費用",
-  "3LGZ6f": "防止審查瀏覽和搜索",
-  "1w6gy4": "禮品卡，家庭共享，電子商務和服務等數十個類別",
-  "3RgYtu": "什麼是Origin Tokens？",
-  "2klVRF": "Origin加密貨幣令牌（OGN）是ERC-20令牌，可以通過多種方式在平台上使用。",
-  "3FISrv": "獲得的原始令牌（OGN）目前已鎖定在Origin應用和平台上使用。它們目前無法轉移給其他用戶。在未來，預計OGN將被解鎖和可轉移。",
-  "3cl6l0": "學到更多",
-  "2CCXRK": "獎勵",
-  "3yDMxS": "OGN是Origin用戶獲得的獎勵加密貨幣。驗證帳戶或邀請朋友加入Origin時獲得獎勵。當你買賣時，甚至可以將OGN作為現金返還。",
-  "3x8LcU": "促進",
-  "nQxkV": "賣家使用OGN在市場上宣傳自己的產品。這使他們的列表具有更高的可見性和位置。帶有OGN的商品有更高的機會被迅速出售。",
-  "3IdS1u": "幾分鐘內開始賺取原始令牌",
-  "3x5LAR": "將您的加密貨幣錢包連接到Origin",
-  "1rYphf": "註冊並驗證您的帳戶和資格",
-  "xy6Hw": "今天開始賺錢",
-  "1A0dWH": "入門",
-  "2pjq9v": "有問題嗎？",
-  "4BVEan": "保持聯繫",
+  "2rolpt": "Join Origin Rewards to earn",
+  "2UiHlq": "Your friend {name} has invited you to earn",
+  "3DGyPu": "Origin Tokens",
+  "45NvfT": "Sign Up Now",
+  "4ox9Sb": "Get started by downloading Origin Marketplace - the app that allows you to buy and sell anything using crypto right from your phone.",
+  "1EEJqF": "Scan to install our app",
+  "VIbSQ": "or",
+  "3LJKn0": "Earn From Desktop",
+  "q02iR": "What are Origin Rewards?",
+  "EGUu4": "OGN is a rewards cryptocurrency earned by Origin users. Earn rewards when you verify your account or invite your friends to join Origin. Even get OGN as cash back when you buy and sell.",
   "4jRz2r": "起源獎勵",
   "3gLqI4": "加入競選",
   "PhK4s": "起源獎勵條款",
@@ -783,7 +769,7 @@
   "1R5Tqk": "接受條款",
   "4DsgoB": "註冊原籍獎勵",
   "1oOkt7": "加入Origin的獎勵計劃即可賺取Origin代幣（OGN）。條款和條件適用。",
-  "157nkC": "贏得的OGN將在每個活動結束時分發。 OGN當前在Origin平台上被鎖定以供使用，並且無法轉讓。預計OGN將在未來解鎖並轉讓。",
+  "VWMI": "Earned OGN will be distributed at the end of each campaign at the sole discretion of Origin.",
   "4weJUD": "通過加入Origin獎勵計劃，您同意從賺取代幣之日起至少一年內不會將未來賺取的Origin代幣轉讓或出售給其他人。",
   "4vRJSg": "OGN最初是根據1933年《美國證券法》（經修訂）（“證券法”）免予註冊的交易中發行的，不得在美國轉讓給任何美國或為任何美國的帳戶或利益轉讓除非根據《證券法》和所有適用的州證券法的註冊要求可獲豁免。上面使用的術語具有《證券法》第S條和所有適用法律和法規賦予它們的含義。",
   "1oPDxX": "I am not a citizen or resident of the United States of America",
@@ -1041,7 +1027,7 @@
   "qUaej": "消息",
   "3e7Twf": "通知",
   "4yVyLH": "設定值",
-  "2sNgod": "反饋",
+  "2wfvdg": "Help",
   "3vGT5M": "安慰",
   "1k58ts": "更多",
   "40SIOC": "清單",
